--- a/static/3d-printed-laptop-stand.html
+++ b/static/3d-printed-laptop-stand.html
@@ -68,7 +68,7 @@
     <div class="e-content">
         <p>A bit of 3d printing and the ergonomics of my Thinkpad laptop are much improved. It also frees up quite a bit of desk space. </p>
 
-<p><img alt="" src="images/b/c/5/0/7/bc5071f82f8d89cb5898a01f029ac790fb2b3292-20151202-200938007398.jpg" srcset="http://blog.lan/images/d/c/a/5/f/dca5f9900af6f9f16f440e1a9d2b4e7e27079fe6-20151202-2009380073982x.jpeg 1000w, http://blog.lan/images/1/b/a/3/6/1ba36941c3a66e956fc0123202f691fb35ad91af-20151202-2009380073983x.jpeg 1500w, http://blog.lan/images/2/1/1/0/d/2110dce3cea372bb2c75cdebf9550cb6922a9ca0-20151202-2009380073984x.jpeg 2500w, http://blog.lan/images/4/7/b/7/c/47b7ca508c8d9954f5a50ab5bf5193ca3509f6c9-20151202-2009380073985x.jpeg 3500w, http://blog.lan/images/c/f/3/a/4/cf3a4cf4b5f7dd05de0c5c180ec0eeed4756ca68-20151202-2009380073986x.jpeg 5312w, http://blog.lan/images/b/c/5/0/7/bc5071f82f8d89cb5898a01f029ac790fb2b3292-20151202-200938007398.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/b/c/5/0/7/bc5071f82f8d89cb5898a01f029ac790fb2b3292-20151202-200938007398.jpg" srcset="https://lifeintimelapse.github.io/images/d/c/a/5/f/dca5f9900af6f9f16f440e1a9d2b4e7e27079fe6-20151202-2009380073982x.jpeg 1000w, https://lifeintimelapse.github.io/images/1/b/a/3/6/1ba36941c3a66e956fc0123202f691fb35ad91af-20151202-2009380073983x.jpeg 1500w, https://lifeintimelapse.github.io/images/2/1/1/0/d/2110dce3cea372bb2c75cdebf9550cb6922a9ca0-20151202-2009380073984x.jpeg 2500w, https://lifeintimelapse.github.io/images/4/7/b/7/c/47b7ca508c8d9954f5a50ab5bf5193ca3509f6c9-20151202-2009380073985x.jpeg 3500w, https://lifeintimelapse.github.io/images/c/f/3/a/4/cf3a4cf4b5f7dd05de0c5c180ec0eeed4756ca68-20151202-2009380073986x.jpeg 5312w, https://lifeintimelapse.github.io/images/b/c/5/0/7/bc5071f82f8d89cb5898a01f029ac790fb2b3292-20151202-200938007398.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -106,8 +106,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
