--- a/static/50-shades-of-chrome.html
+++ b/static/50-shades-of-chrome.html
@@ -70,7 +70,7 @@
     <div class="e-content">
         <p>2 wheels... the only way to get around London!</p>
 
-<p><img alt="" src="images/a/e/9/9/5/ae995786c7cdbf8e9363dab553b7a487595a5f54-20150719-205454704326.jpg" srcset="http://blog.lan/images/5/b/e/c/f/5becf9d1708b4416499a918de5ab042a9bb23eca-20150719-2054547043262x.jpeg 1000w, http://blog.lan/images/c/8/0/8/d/c808dc3778220a6ed647bdd5a316551781e7a224-20150719-2054547043263x.jpeg 1500w, http://blog.lan/images/1/4/a/3/8/14a3874127ab5870e701131d1de093efba92c224-20150719-2054547043264x.jpeg 2500w, http://blog.lan/images/b/4/1/5/7/b41576bd1530c0d5e90550b18921724de5344510-20150719-2054547043265x.jpeg 3500w, http://blog.lan/images/3/0/4/f/e/304fe807d2b37dcd903d434a6a887f4cbcfbc936-20150719-2054547043266x.jpeg 5312w, http://blog.lan/images/a/e/9/9/5/ae995786c7cdbf8e9363dab553b7a487595a5f54-20150719-205454704326.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/a/e/9/9/5/ae995786c7cdbf8e9363dab553b7a487595a5f54-20150719-205454704326.jpg" srcset="https://lifeintimelapse.github.io/images/5/b/e/c/f/5becf9d1708b4416499a918de5ab042a9bb23eca-20150719-2054547043262x.jpeg 1000w, https://lifeintimelapse.github.io/images/c/8/0/8/d/c808dc3778220a6ed647bdd5a316551781e7a224-20150719-2054547043263x.jpeg 1500w, https://lifeintimelapse.github.io/images/1/4/a/3/8/14a3874127ab5870e701131d1de093efba92c224-20150719-2054547043264x.jpeg 2500w, https://lifeintimelapse.github.io/images/b/4/1/5/7/b41576bd1530c0d5e90550b18921724de5344510-20150719-2054547043265x.jpeg 3500w, https://lifeintimelapse.github.io/images/3/0/4/f/e/304fe807d2b37dcd903d434a6a887f4cbcfbc936-20150719-2054547043266x.jpeg 5312w, https://lifeintimelapse.github.io/images/a/e/9/9/5/ae995786c7cdbf8e9363dab553b7a487595a5f54-20150719-205454704326.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -108,8 +108,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
