--- a/static/better-code-management.html
+++ b/static/better-code-management.html
@@ -69,7 +69,7 @@
         <p>I've been running my own internal Git server on my Synology NAS for some years. A while back I searched around for a UI for Git. I'm comfortable at the CLI but sometimes I just prefer a GUI for browsing through revisions. </p>
 
 <p>I settled on Gitlist, which was simple to integrate with the Synology hosted git server and met my requirements. More recently though I upgraded to a new Synology box that supports Docker and I noticed that a GitLab container is now offered in the available applications. I thought I would test it out and I'm very pleased with the results. It is much more feature-rich and provides a lot of repository management functions. It's also nice to have separate bug and feature lists for each project, so I've been able to tidy up my Wunderlist and move these into GitLab.</p>
-<p><img alt="" src="images/2/1/5/9/2/21592852a3ccb768868ce5aff23893c7bfd3b70b-screenshot20190704001130.png" srcset="http://blog.lan/images/1/6/0/3/d/1603d3420d7c690ff79d0f8895dcc2eee63fc769-screenshot201907040011302x.png 1000w, http://blog.lan/images/9/1/5/9/4/9159452477f5d5aa2051348c9ae76ba796c7f693-screenshot201907040011303x.png 1500w, http://blog.lan/images/2/a/e/7/f/2ae7f7859a85e5a37a836f3da6e25196d009b431-screenshot201907040011304x.png 1564w, http://blog.lan/images/2/1/5/9/2/21592852a3ccb768868ce5aff23893c7bfd3b70b-screenshot20190704001130.png 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/2/1/5/9/2/21592852a3ccb768868ce5aff23893c7bfd3b70b-screenshot20190704001130.png" srcset="https://lifeintimelapse.github.io/images/1/6/0/3/d/1603d3420d7c690ff79d0f8895dcc2eee63fc769-screenshot201907040011302x.png 1000w, https://lifeintimelapse.github.io/images/9/1/5/9/4/9159452477f5d5aa2051348c9ae76ba796c7f693-screenshot201907040011303x.png 1500w, https://lifeintimelapse.github.io/images/2/a/e/7/f/2ae7f7859a85e5a37a836f3da6e25196d009b431-screenshot201907040011304x.png 1564w, https://lifeintimelapse.github.io/images/2/1/5/9/2/21592852a3ccb768868ce5aff23893c7bfd3b70b-screenshot20190704001130.png 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -107,8 +107,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
