--- a/static/biking-in-the-snow.html
+++ b/static/biking-in-the-snow.html
@@ -68,7 +68,7 @@
     <div class="e-content">
         <p>First long ride of the season and it snows! Right after this it started settling on the road which made things a bit hairy... I'm starting to seriously consider fitting that slightly slippier clutch the dealer suggested. </p>
 
-<p><img alt="" src="images/c/b/a/7/2/cba72227c544cb0a48efc54793a60b7ed55f09f3-screenshot20190701222358.png" srcset="http://blog.lan/images/d/6/e/3/f/d6e3f7668109e12a91b916d125de693df21815f4-screenshot201907012223582x.png 1000w, http://blog.lan/images/e/5/7/f/1/e57f1130bbdc2649f0c3e1afed4dfc626acf6177-screenshot201907012223583x.png 1046w, http://blog.lan/images/c/b/a/7/2/cba72227c544cb0a48efc54793a60b7ed55f09f3-screenshot20190701222358.png 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/c/b/a/7/2/cba72227c544cb0a48efc54793a60b7ed55f09f3-screenshot20190701222358.png" srcset="https://lifeintimelapse.github.io/images/d/6/e/3/f/d6e3f7668109e12a91b916d125de693df21815f4-screenshot201907012223582x.png 1000w, https://lifeintimelapse.github.io/images/e/5/7/f/1/e57f1130bbdc2649f0c3e1afed4dfc626acf6177-screenshot201907012223583x.png 1046w, https://lifeintimelapse.github.io/images/c/b/a/7/2/cba72227c544cb0a48efc54793a60b7ed55f09f3-screenshot20190701222358.png 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -106,8 +106,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
