--- a/static/che-bella-dolomiti.html
+++ b/static/che-bella-dolomiti.html
@@ -68,7 +68,7 @@
     <div class="e-content">
         <p>Apparently I was too busy skiing to take many photos this year!</p>
 
-<p><img alt="" src="images/8/0/8/2/3/80823d0485b30891d257296fa333dad885ece369-20140220-171054.jpg" srcset="http://blog.lan/images/f/a/0/6/3/fa063b1aaa5815dfb29748c18b3cb65982b39eda-20140220-1710542x.jpeg 1000w, http://blog.lan/images/0/8/8/a/e/088ae9641fdf7f054ef8db7ddb0c81a9e9e7b851-20140220-1710543x.jpeg 1500w, http://blog.lan/images/8/c/4/c/2/8c4c20d41d53c57177ddb70af33de9ecefd0b244-20140220-1710544x.jpeg 2500w, http://blog.lan/images/4/8/0/b/a/480ba87a6014669da5c9c321ffd813b26f078aea-20140220-1710545x.jpeg 3264w, http://blog.lan/images/8/0/8/2/3/80823d0485b30891d257296fa333dad885ece369-20140220-171054.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/8/0/8/2/3/80823d0485b30891d257296fa333dad885ece369-20140220-171054.jpg" srcset="https://lifeintimelapse.github.io/images/f/a/0/6/3/fa063b1aaa5815dfb29748c18b3cb65982b39eda-20140220-1710542x.jpeg 1000w, https://lifeintimelapse.github.io/images/0/8/8/a/e/088ae9641fdf7f054ef8db7ddb0c81a9e9e7b851-20140220-1710543x.jpeg 1500w, https://lifeintimelapse.github.io/images/8/c/4/c/2/8c4c20d41d53c57177ddb70af33de9ecefd0b244-20140220-1710544x.jpeg 2500w, https://lifeintimelapse.github.io/images/4/8/0/b/a/480ba87a6014669da5c9c321ffd813b26f078aea-20140220-1710545x.jpeg 3264w, https://lifeintimelapse.github.io/images/8/0/8/2/3/80823d0485b30891d257296fa333dad885ece369-20140220-171054.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -106,8 +106,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
