--- a/static/custom-router-firmware.html
+++ b/static/custom-router-firmware.html
@@ -78,7 +78,7 @@
 <li>I can replicate my MAC filter rules from the main router.</li>
 <li>The TX power can be manually adjusted on both units to persuade my devices to pick the optimal router as I move about the house.</li>
 </ol>
-<p><img alt="" src="images/e/a/9/5/1/ea951bf63422423c038560ae2c0813f460f2dad0-screenshot2019-07-27-lede---overview---luci.png" srcset="http://blog.lan/images/a/a/e/4/5/aae450350aaf5dabd3e441ed843f1a04994cb67b-screenshot2019-07-27-lede---overview---luci2x.png 1000w, http://blog.lan/images/c/9/7/2/2/c972224713601f581a484f2ffffc417242db700c-screenshot2019-07-27-lede---overview---luci3x.png 1209w, http://blog.lan/images/e/a/9/5/1/ea951bf63422423c038560ae2c0813f460f2dad0-screenshot2019-07-27-lede---overview---luci.png 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/e/a/9/5/1/ea951bf63422423c038560ae2c0813f460f2dad0-screenshot2019-07-27-lede---overview---luci.png" srcset="https://lifeintimelapse.github.io/images/a/a/e/4/5/aae450350aaf5dabd3e441ed843f1a04994cb67b-screenshot2019-07-27-lede---overview---luci2x.png 1000w, https://lifeintimelapse.github.io/images/c/9/7/2/2/c972224713601f581a484f2ffffc417242db700c-screenshot2019-07-27-lede---overview---luci3x.png 1209w, https://lifeintimelapse.github.io/images/e/a/9/5/1/ea951bf63422423c038560ae2c0813f460f2dad0-screenshot2019-07-27-lede---overview---luci.png 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -116,8 +116,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
