--- a/static/disaster-recovery.html
+++ b/static/disaster-recovery.html
@@ -76,7 +76,7 @@
 <li>Boot up!</li>
 </ol>
 <p>After that, everything was back to normal as if the outage had never occurred. Even my docker containers booted straight back up and carried on without a hitch. </p>
-<p><img alt="" src="images/4/c/f/1/8/4cf18e007e500a12410e96480e08a6552142ea70-img20190725172121.jpg" srcset="http://blog.lan/images/2/e/e/e/c/2eeecf04a4d2c0b736f710eb51ea487027a69ae7-img201907251721212x.jpeg 1000w, http://blog.lan/images/a/e/6/d/f/ae6df1f88ae0b6d4be2aeb3510b5441316753382-img201907251721213x.jpeg 1500w, http://blog.lan/images/c/d/8/f/1/cd8f1d0dff8e487e088503c5b79ac41a5cbff58a-img201907251721214x.jpeg 2500w, http://blog.lan/images/e/3/0/3/c/e303cf61c3bd584bdf6b933cadc47585c0ba9d5d-img201907251721215x.jpeg 3500w, http://blog.lan/images/0/4/e/0/d/04e0d81f6db7713f656449cfe2dda5f3300804f1-img201907251721216x.jpeg 5312w, http://blog.lan/images/4/c/f/1/8/4cf18e007e500a12410e96480e08a6552142ea70-img20190725172121.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/4/c/f/1/8/4cf18e007e500a12410e96480e08a6552142ea70-img20190725172121.jpg" srcset="https://lifeintimelapse.github.io/images/2/e/e/e/c/2eeecf04a4d2c0b736f710eb51ea487027a69ae7-img201907251721212x.jpeg 1000w, https://lifeintimelapse.github.io/images/a/e/6/d/f/ae6df1f88ae0b6d4be2aeb3510b5441316753382-img201907251721213x.jpeg 1500w, https://lifeintimelapse.github.io/images/c/d/8/f/1/cd8f1d0dff8e487e088503c5b79ac41a5cbff58a-img201907251721214x.jpeg 2500w, https://lifeintimelapse.github.io/images/e/3/0/3/c/e303cf61c3bd584bdf6b933cadc47585c0ba9d5d-img201907251721215x.jpeg 3500w, https://lifeintimelapse.github.io/images/0/4/e/0/d/04e0d81f6db7713f656449cfe2dda5f3300804f1-img201907251721216x.jpeg 5312w, https://lifeintimelapse.github.io/images/4/c/f/1/8/4cf18e007e500a12410e96480e08a6552142ea70-img20190725172121.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -114,8 +114,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
