--- a/static/disaster.html
+++ b/static/disaster.html
@@ -72,7 +72,7 @@
 <ul>
 <li>Well, not technically the first, I've had drives fail before. But recovery in that case is simply a matter of popping in a replacement drive and letting the RAID array reconfigure itself, with zero downtime. I've yet to have to resort to restoring from the backup drives.</li>
 </ul>
-<p><img alt="" src="images/b/e/5/4/6/be546570206d2a606daec5a90c7d727a7c12aebd-img20190725171932.jpg" srcset="http://blog.lan/images/9/1/c/6/f/91c6fec62ce79453a67db65dc99642157085befa-img201907251719322x.jpeg 1000w, http://blog.lan/images/4/1/3/1/7/41317d05a7d8f6c8beea99fc31cd65af3071ef6f-img201907251719323x.jpeg 1500w, http://blog.lan/images/b/d/8/e/6/bd8e65b24f94c68e9bea1fa7842fd872dbcf3413-img201907251719324x.jpeg 2500w, http://blog.lan/images/f/5/3/9/7/f53979f6f8f3e34ce1785c8db1d69f8f03e13ade-img201907251719325x.jpeg 3500w, http://blog.lan/images/e/c/9/f/e/ec9fe8418ee93be8e2b7dfaef41ffdf2962c7f25-img201907251719326x.jpeg 5312w, http://blog.lan/images/b/e/5/4/6/be546570206d2a606daec5a90c7d727a7c12aebd-img20190725171932.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/b/e/5/4/6/be546570206d2a606daec5a90c7d727a7c12aebd-img20190725171932.jpg" srcset="https://lifeintimelapse.github.io/images/9/1/c/6/f/91c6fec62ce79453a67db65dc99642157085befa-img201907251719322x.jpeg 1000w, https://lifeintimelapse.github.io/images/4/1/3/1/7/41317d05a7d8f6c8beea99fc31cd65af3071ef6f-img201907251719323x.jpeg 1500w, https://lifeintimelapse.github.io/images/b/d/8/e/6/bd8e65b24f94c68e9bea1fa7842fd872dbcf3413-img201907251719324x.jpeg 2500w, https://lifeintimelapse.github.io/images/f/5/3/9/7/f53979f6f8f3e34ce1785c8db1d69f8f03e13ade-img201907251719325x.jpeg 3500w, https://lifeintimelapse.github.io/images/e/c/9/f/e/ec9fe8418ee93be8e2b7dfaef41ffdf2962c7f25-img201907251719326x.jpeg 5312w, https://lifeintimelapse.github.io/images/b/e/5/4/6/be546570206d2a606daec5a90c7d727a7c12aebd-img20190725171932.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -110,8 +110,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
