--- a/static/failing-to-parachute-in-a-good-way.html
+++ b/static/failing-to-parachute-in-a-good-way.html
@@ -68,7 +68,7 @@
     <div class="e-content">
         <p>Last year we bought tickets to go parachuting, but the weather always thwarts us. We've booked in and turned up several times, but always the sunny forecast gives way to winds that are too strong to safely parachute. Still, we did get to try out the practice tunnel, a giant fan that blows air upward with such force that it keeps you suspended above the ground. Maybe we'll have better luck next year.</p>
 
-<p><img alt="" src="images/a/a/c/6/e/aac6ebc726dd50579ed17c92d757153b5ed670e1-20100710-194853.jpg" srcset="http://blog.lan/images/1/0/1/1/b/1011b590f6a6e84309f01dc672e65257d7f1549e-20100710-1948532x.jpeg 1000w, http://blog.lan/images/9/b/e/6/e/9be6e69e84d4808092b2aa2cf37368a75793a5ef-20100710-1948533x.jpeg 1500w, http://blog.lan/images/4/4/c/b/a/44cba31b926139b9e5ade684c8961122aa207aaa-20100710-1948534x.jpeg 2500w, http://blog.lan/images/9/b/6/f/d/9b6fdb9411fd37ab8f981f9a9393f18a699131df-20100710-1948535x.jpeg 2560w, http://blog.lan/images/a/a/c/6/e/aac6ebc726dd50579ed17c92d757153b5ed670e1-20100710-194853.jpeg 640w" sizes="100vw" /><img alt="" src="images/1/d/1/c/9/1d1c94625b17eab8ee78ef6c92bc62b814789ec0-20100710-194910.jpg" srcset="http://blog.lan/images/a/f/0/5/4/af0544e2e0ab341003355cc4ea7ac0699638ce95-20100710-1949102x.jpeg 1000w, http://blog.lan/images/0/b/4/4/0/0b440660da05adab2dd243995f6a96b812fd6a3d-20100710-1949103x.jpeg 1500w, http://blog.lan/images/7/8/a/b/d/78abd6a900fc3c998a19945b33fb69005dea776c-20100710-1949104x.jpeg 2500w, http://blog.lan/images/a/f/d/c/b/afdcb56f3dfa45f99018fb4cfc3f37ede1849119-20100710-1949105x.jpeg 2560w, http://blog.lan/images/1/d/1/c/9/1d1c94625b17eab8ee78ef6c92bc62b814789ec0-20100710-194910.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/a/a/c/6/e/aac6ebc726dd50579ed17c92d757153b5ed670e1-20100710-194853.jpg" srcset="https://lifeintimelapse.github.io/images/1/0/1/1/b/1011b590f6a6e84309f01dc672e65257d7f1549e-20100710-1948532x.jpeg 1000w, https://lifeintimelapse.github.io/images/9/b/e/6/e/9be6e69e84d4808092b2aa2cf37368a75793a5ef-20100710-1948533x.jpeg 1500w, https://lifeintimelapse.github.io/images/4/4/c/b/a/44cba31b926139b9e5ade684c8961122aa207aaa-20100710-1948534x.jpeg 2500w, https://lifeintimelapse.github.io/images/9/b/6/f/d/9b6fdb9411fd37ab8f981f9a9393f18a699131df-20100710-1948535x.jpeg 2560w, https://lifeintimelapse.github.io/images/a/a/c/6/e/aac6ebc726dd50579ed17c92d757153b5ed670e1-20100710-194853.jpeg 640w" sizes="100vw" /><img alt="" src="images/1/d/1/c/9/1d1c94625b17eab8ee78ef6c92bc62b814789ec0-20100710-194910.jpg" srcset="https://lifeintimelapse.github.io/images/a/f/0/5/4/af0544e2e0ab341003355cc4ea7ac0699638ce95-20100710-1949102x.jpeg 1000w, https://lifeintimelapse.github.io/images/0/b/4/4/0/0b440660da05adab2dd243995f6a96b812fd6a3d-20100710-1949103x.jpeg 1500w, https://lifeintimelapse.github.io/images/7/8/a/b/d/78abd6a900fc3c998a19945b33fb69005dea776c-20100710-1949104x.jpeg 2500w, https://lifeintimelapse.github.io/images/a/f/d/c/b/afdcb56f3dfa45f99018fb4cfc3f37ede1849119-20100710-1949105x.jpeg 2560w, https://lifeintimelapse.github.io/images/1/d/1/c/9/1d1c94625b17eab8ee78ef6c92bc62b814789ec0-20100710-194910.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -106,8 +106,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
