--- a/static/kx-at-the-k-club.html
+++ b/static/kx-at-the-k-club.html
@@ -70,7 +70,7 @@
     <div class="e-content">
         <p>Attending the kx Annual Conference at the K club in Ireland for a couple of days. Fantastic venue to catch up on the latest KDB+ developments.</p>
 
-<p><img alt="" src="images/6/b/c/f/2/6bcf21f590cf2712888772a7b8d146aa80507e97-20120523-185436.jpg" srcset="http://blog.lan/images/a/1/e/6/2/a1e626ad443274f585223327a0f9cd5ae6d6fc0f-20120523-1854362x.jpeg 1000w, http://blog.lan/images/5/d/7/8/1/5d78174ffea13d782e08d26433b2701dca0f2839-20120523-1854363x.jpeg 1500w, http://blog.lan/images/c/a/5/3/1/ca531bf316769a05dd9227b6ce00a398090d9f67-20120523-1854364x.jpeg 2500w, http://blog.lan/images/1/c/c/a/a/1ccaa759d009674cf6933bae2af20d8ff9eaac97-20120523-1854365x.jpeg 3264w, http://blog.lan/images/6/b/c/f/2/6bcf21f590cf2712888772a7b8d146aa80507e97-20120523-185436.jpeg 640w" sizes="100vw" /><img alt="" src="images/b/e/3/b/7/be3b7fef0380e682a160ff5a1cd1f8e2b3c6b2fa-20120525-111944.jpg" srcset="http://blog.lan/images/5/4/3/e/8/543e82395f10edb92c596f993dc9ec800282690a-20120525-1119442x.jpeg 1000w, http://blog.lan/images/8/7/6/3/6/876365c734686d465e3f2b11da20721fdaf21f29-20120525-1119443x.jpeg 1500w, http://blog.lan/images/b/2/7/3/0/b27303d1f79958d73d28562081a0d8891185fc9f-20120525-1119444x.jpeg 2500w, http://blog.lan/images/c/4/9/9/f/c499f8f270f0353a9adb0af99c8246b6f0e4df40-20120525-1119445x.jpeg 3264w, http://blog.lan/images/b/e/3/b/7/be3b7fef0380e682a160ff5a1cd1f8e2b3c6b2fa-20120525-111944.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/6/b/c/f/2/6bcf21f590cf2712888772a7b8d146aa80507e97-20120523-185436.jpg" srcset="https://lifeintimelapse.github.io/images/a/1/e/6/2/a1e626ad443274f585223327a0f9cd5ae6d6fc0f-20120523-1854362x.jpeg 1000w, https://lifeintimelapse.github.io/images/5/d/7/8/1/5d78174ffea13d782e08d26433b2701dca0f2839-20120523-1854363x.jpeg 1500w, https://lifeintimelapse.github.io/images/c/a/5/3/1/ca531bf316769a05dd9227b6ce00a398090d9f67-20120523-1854364x.jpeg 2500w, https://lifeintimelapse.github.io/images/1/c/c/a/a/1ccaa759d009674cf6933bae2af20d8ff9eaac97-20120523-1854365x.jpeg 3264w, https://lifeintimelapse.github.io/images/6/b/c/f/2/6bcf21f590cf2712888772a7b8d146aa80507e97-20120523-185436.jpeg 640w" sizes="100vw" /><img alt="" src="images/b/e/3/b/7/be3b7fef0380e682a160ff5a1cd1f8e2b3c6b2fa-20120525-111944.jpg" srcset="https://lifeintimelapse.github.io/images/5/4/3/e/8/543e82395f10edb92c596f993dc9ec800282690a-20120525-1119442x.jpeg 1000w, https://lifeintimelapse.github.io/images/8/7/6/3/6/876365c734686d465e3f2b11da20721fdaf21f29-20120525-1119443x.jpeg 1500w, https://lifeintimelapse.github.io/images/b/2/7/3/0/b27303d1f79958d73d28562081a0d8891185fc9f-20120525-1119444x.jpeg 2500w, https://lifeintimelapse.github.io/images/c/4/9/9/f/c499f8f270f0353a9adb0af99c8246b6f0e4df40-20120525-1119445x.jpeg 3264w, https://lifeintimelapse.github.io/images/b/e/3/b/7/be3b7fef0380e682a160ff5a1cd1f8e2b3c6b2fa-20120525-111944.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -108,8 +108,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
