--- a/static/reverse-proxying-containers.html
+++ b/static/reverse-proxying-containers.html
@@ -86,7 +86,7 @@ address=/blog.lan/192.168.1.252</code></pre>
     ProxyPassReverse / http://192.168.1.252:30000/
 &lt;/VirtualHost&gt;</code></pre>
 <p>Here the container's port 3000 is forwarded from the gitlab.lan address on port 80 of the Linux server. Thus I can finish my dnsmasq configuration on the router with the remaining services, now forwarded from the Linux box:</p>
-<p><img alt="" src="images/b/a/9/2/f/ba92fe8c244132204afb140612dc1512aeb56c7d-screenshot2019-07-26-tomatousb-advanced-dhcp-dns.png" srcset="http://blog.lan/images/1/1/7/2/c/1172c62a1f091d40c1919b05e294db95c2c6740a-screenshot2019-07-26-tomatousb-advanced-dhcp-dns2x.png 1000w, http://blog.lan/images/7/c/a/c/4/7cac462f3ea0376dbf57536e4f05d96aed5331bf-screenshot2019-07-26-tomatousb-advanced-dhcp-dns3x.png 1215w, http://blog.lan/images/b/a/9/2/f/ba92fe8c244132204afb140612dc1512aeb56c7d-screenshot2019-07-26-tomatousb-advanced-dhcp-dns.png 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/b/a/9/2/f/ba92fe8c244132204afb140612dc1512aeb56c7d-screenshot2019-07-26-tomatousb-advanced-dhcp-dns.png" srcset="https://lifeintimelapse.github.io/images/1/1/7/2/c/1172c62a1f091d40c1919b05e294db95c2c6740a-screenshot2019-07-26-tomatousb-advanced-dhcp-dns2x.png 1000w, https://lifeintimelapse.github.io/images/7/c/a/c/4/7cac462f3ea0376dbf57536e4f05d96aed5331bf-screenshot2019-07-26-tomatousb-advanced-dhcp-dns3x.png 1215w, https://lifeintimelapse.github.io/images/b/a/9/2/f/ba92fe8c244132204afb140612dc1512aeb56c7d-screenshot2019-07-26-tomatousb-advanced-dhcp-dns.png 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -124,8 +124,8 @@ address=/blog.lan/192.168.1.252</code></pre>
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
