--- a/static/sometimes-you-just-cant-decide-whether-to-scoot-or-to-cycle.html
+++ b/static/sometimes-you-just-cant-decide-whether-to-scoot-or-to-cycle.html
@@ -69,7 +69,7 @@
     <div class="e-content">
         <p>Both?</p>
 
-<p><img alt="" src="images/0/4/7/e/b/047ebd32edd12bb2bb4053149cb3169f061b061d-20160713-190203660687.jpg" srcset="http://blog.lan/images/4/3/f/4/0/43f4054e29370c897eee6f28b7db9bd0fe525757-20160713-1902036606872x.jpeg 1000w, http://blog.lan/images/3/f/4/c/6/3f4c6bff13dc4d37c0d1afe7589a93e4abce23ed-20160713-1902036606873x.jpeg 1500w, http://blog.lan/images/2/f/6/3/e/2f63ed6ea4ca1831042771f7b14eed5c35639e5e-20160713-1902036606874x.jpeg 2500w, http://blog.lan/images/0/6/c/9/3/06c93073b13fda05fc9de38ee3ee97c6a041a6b6-20160713-1902036606875x.jpeg 3500w, http://blog.lan/images/e/7/b/7/1/e7b71f808deaa6c40a50cbbf7bf72499009df6b3-20160713-1902036606876x.jpeg 5312w, http://blog.lan/images/0/4/7/e/b/047ebd32edd12bb2bb4053149cb3169f061b061d-20160713-190203660687.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/0/4/7/e/b/047ebd32edd12bb2bb4053149cb3169f061b061d-20160713-190203660687.jpg" srcset="https://lifeintimelapse.github.io/images/4/3/f/4/0/43f4054e29370c897eee6f28b7db9bd0fe525757-20160713-1902036606872x.jpeg 1000w, https://lifeintimelapse.github.io/images/3/f/4/c/6/3f4c6bff13dc4d37c0d1afe7589a93e4abce23ed-20160713-1902036606873x.jpeg 1500w, https://lifeintimelapse.github.io/images/2/f/6/3/e/2f63ed6ea4ca1831042771f7b14eed5c35639e5e-20160713-1902036606874x.jpeg 2500w, https://lifeintimelapse.github.io/images/0/6/c/9/3/06c93073b13fda05fc9de38ee3ee97c6a041a6b6-20160713-1902036606875x.jpeg 3500w, https://lifeintimelapse.github.io/images/e/7/b/7/1/e7b71f808deaa6c40a50cbbf7bf72499009df6b3-20160713-1902036606876x.jpeg 5312w, https://lifeintimelapse.github.io/images/0/4/7/e/b/047ebd32edd12bb2bb4053149cb3169f061b061d-20160713-190203660687.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -107,8 +107,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
