--- a/static/stripping-down-the-old-servers.html
+++ b/static/stripping-down-the-old-servers.html
@@ -68,7 +68,7 @@
     <div class="e-content">
         <p>Time to retire some old servers as I've made the switch to Synology NAS, which suffice for my purposes. Not before I've scavenged the old hard drives though.</p>
 <p>I don't think I'll be going back to rolling my own. I enjoy the build process, but it's such a time-sink. With the Synology boxes I get less bang for my buck, but they do everything I need and generally look after themselves. </p>
-<p><img alt="" src="images/8/e/2/3/b/8e23b6780959f07d3d7e09b73cf67dd81acab32f-20121208-215527.jpg" srcset="http://blog.lan/images/c/3/3/e/7/c33e7e0cba58c5a3b7c02399ee0214274ca358c8-20121208-2155272x.jpeg 1000w, http://blog.lan/images/6/9/9/1/a/6991a7d8382ad282495c08099ab0304f0b9d7195-20121208-2155273x.jpeg 1500w, http://blog.lan/images/e/a/2/a/4/ea2a4181f1bd421bb6d9134bd7551f6da19f000a-20121208-2155274x.jpeg 2500w, http://blog.lan/images/9/6/a/9/2/96a92660f59d74ce13f53bb2ad2c914c9cdc99a4-20121208-2155275x.jpeg 3264w, http://blog.lan/images/8/e/2/3/b/8e23b6780959f07d3d7e09b73cf67dd81acab32f-20121208-215527.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/8/e/2/3/b/8e23b6780959f07d3d7e09b73cf67dd81acab32f-20121208-215527.jpg" srcset="https://lifeintimelapse.github.io/images/c/3/3/e/7/c33e7e0cba58c5a3b7c02399ee0214274ca358c8-20121208-2155272x.jpeg 1000w, https://lifeintimelapse.github.io/images/6/9/9/1/a/6991a7d8382ad282495c08099ab0304f0b9d7195-20121208-2155273x.jpeg 1500w, https://lifeintimelapse.github.io/images/e/a/2/a/4/ea2a4181f1bd421bb6d9134bd7551f6da19f000a-20121208-2155274x.jpeg 2500w, https://lifeintimelapse.github.io/images/9/6/a/9/2/96a92660f59d74ce13f53bb2ad2c914c9cdc99a4-20121208-2155275x.jpeg 3264w, https://lifeintimelapse.github.io/images/8/e/2/3/b/8e23b6780959f07d3d7e09b73cf67dd81acab32f-20121208-215527.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -106,8 +106,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
