--- a/static/tag_3dprinting.html
+++ b/static/tag_3dprinting.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="3d-printed-backpack-lacing-router.html"><img alt="" src="images/0/4/e/a/0/04ea01fd1cd5c945fad8351e5e6bb37f447fe8e1-20190630-204154.jpg" srcset="http://blog.lan/images/1/e/f/a/8/1efa8b9651864e76d9d49f92013d552dccff3bc1-20190630-2041542x.jpeg 1000w, http://blog.lan/images/7/0/8/9/8/70898c7ec547ca4b72e3731e6cfe1ae97a112d37-20190630-2041543x.jpeg 1500w, http://blog.lan/images/7/7/a/0/7/77a07370b52e9f6c5d23345299efa6310f3962e2-20190630-2041544x.jpeg 2500w, http://blog.lan/images/8/d/8/6/3/8d86393992edfea3f283bc1df4e41976d80d8c16-20190630-2041545x.jpeg 2988w, http://blog.lan/images/0/4/e/a/0/04ea01fd1cd5c945fad8351e5e6bb37f447fe8e1-20190630-204154.jpeg 640w" sizes="100vw" /></a>
+        <a href="3d-printed-backpack-lacing-router.html"><img alt="" src="images/0/4/e/a/0/04ea01fd1cd5c945fad8351e5e6bb37f447fe8e1-20190630-204154.jpg" srcset="https://lifeintimelapse.github.io/images/1/e/f/a/8/1efa8b9651864e76d9d49f92013d552dccff3bc1-20190630-2041542x.jpeg 1000w, https://lifeintimelapse.github.io/images/7/0/8/9/8/70898c7ec547ca4b72e3731e6cfe1ae97a112d37-20190630-2041543x.jpeg 1500w, https://lifeintimelapse.github.io/images/7/7/a/0/7/77a07370b52e9f6c5d23345299efa6310f3962e2-20190630-2041544x.jpeg 2500w, https://lifeintimelapse.github.io/images/8/d/8/6/3/8d86393992edfea3f283bc1df4e41976d80d8c16-20190630-2041545x.jpeg 2988w, https://lifeintimelapse.github.io/images/0/4/e/a/0/04ea01fd1cd5c945fad8351e5e6bb37f447fe8e1-20190630-204154.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -88,7 +88,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="3d-printed-coffee-stand.html"><img alt="" src="images/0/a/1/4/f/0a14ffb65615c8750ac3559c6fb789886252ad87-stilts.png" srcset="http://blog.lan/images/c/e/4/3/3/ce4333193b52a21fe52b1253fdc4f96e3ed44d55-stilts2x.png 807w, http://blog.lan/images/0/a/1/4/f/0a14ffb65615c8750ac3559c6fb789886252ad87-stilts.png 640w" sizes="100vw" /></a>
+        <a href="3d-printed-coffee-stand.html"><img alt="" src="images/0/a/1/4/f/0a14ffb65615c8750ac3559c6fb789886252ad87-stilts.png" srcset="https://lifeintimelapse.github.io/images/c/e/4/3/3/ce4333193b52a21fe52b1253fdc4f96e3ed44d55-stilts2x.png 807w, https://lifeintimelapse.github.io/images/0/a/1/4/f/0a14ffb65615c8750ac3559c6fb789886252ad87-stilts.png 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -114,7 +114,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="3d-printed-window-latch-spacers.html"><img alt="" src="images/e/3/b/1/b/e3b1b6c013585106c74e1abc358d79dbb35119da-bracket.png" srcset="http://blog.lan/images/f/e/7/9/c/fe79c27aa94f7549ade71dc4f938f6d4225b9706-bracket2x.png 922w, http://blog.lan/images/e/3/b/1/b/e3b1b6c013585106c74e1abc358d79dbb35119da-bracket.png 640w" sizes="100vw" /></a>
+        <a href="3d-printed-window-latch-spacers.html"><img alt="" src="images/e/3/b/1/b/e3b1b6c013585106c74e1abc358d79dbb35119da-bracket.png" srcset="https://lifeintimelapse.github.io/images/f/e/7/9/c/fe79c27aa94f7549ade71dc4f938f6d4225b9706-bracket2x.png 922w, https://lifeintimelapse.github.io/images/e/3/b/1/b/e3b1b6c013585106c74e1abc358d79dbb35119da-bracket.png 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -140,7 +140,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="3d-printed-camera-mount.html"><img alt="" src="images/8/1/5/7/6/81576516c492bcd1e88bcd2f3e2a4908966fda62-20140627-125516.jpg" srcset="http://blog.lan/images/3/5/b/1/2/35b12b24a1ef144b2c663f613db2d7518be1ad58-20140627-1255162x.jpeg 1000w, http://blog.lan/images/4/0/7/f/2/407f2fd0aa6bdcef189ac0b04010724b29f7cff8-20140627-1255163x.jpeg 1500w, http://blog.lan/images/0/6/1/b/0/061b06819ee500608ee2030699434c44d425e8f7-20140627-1255164x.jpeg 2500w, http://blog.lan/images/9/6/8/7/a/9687a40575ad25ef468292aa99e64c228b975999-20140627-1255165x.jpeg 3500w, http://blog.lan/images/7/1/3/1/c/7131c5ad5d25b6828d94c9eb3ab30951e8eee930-20140627-1255166x.jpeg 4128w, http://blog.lan/images/8/1/5/7/6/81576516c492bcd1e88bcd2f3e2a4908966fda62-20140627-125516.jpeg 640w" sizes="100vw" /></a>
+        <a href="3d-printed-camera-mount.html"><img alt="" src="images/8/1/5/7/6/81576516c492bcd1e88bcd2f3e2a4908966fda62-20140627-125516.jpg" srcset="https://lifeintimelapse.github.io/images/3/5/b/1/2/35b12b24a1ef144b2c663f613db2d7518be1ad58-20140627-1255162x.jpeg 1000w, https://lifeintimelapse.github.io/images/4/0/7/f/2/407f2fd0aa6bdcef189ac0b04010724b29f7cff8-20140627-1255163x.jpeg 1500w, https://lifeintimelapse.github.io/images/0/6/1/b/0/061b06819ee500608ee2030699434c44d425e8f7-20140627-1255164x.jpeg 2500w, https://lifeintimelapse.github.io/images/9/6/8/7/a/9687a40575ad25ef468292aa99e64c228b975999-20140627-1255165x.jpeg 3500w, https://lifeintimelapse.github.io/images/7/1/3/1/c/7131c5ad5d25b6828d94c9eb3ab30951e8eee930-20140627-1255166x.jpeg 4128w, https://lifeintimelapse.github.io/images/8/1/5/7/6/81576516c492bcd1e88bcd2f3e2a4908966fda62-20140627-125516.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -196,8 +196,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
