--- a/static/tag_bigdata.html
+++ b/static/tag_bigdata.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="cukeup-conference-london.html"><img alt="" src="images/8/9/6/b/3/896b3eeddab41d849e2458f73a5e08df5ac52916-screenshot20190630224213.png" srcset="http://blog.lan/images/a/6/f/4/5/a6f45ef41591fe42554fa5274df21acc5a17f709-screenshot201906302242132x.png 1000w, http://blog.lan/images/8/3/6/b/d/836bd33bc3b1fa45068ec8fd0729eab1f223ff1d-screenshot201906302242133x.png 1139w, http://blog.lan/images/8/9/6/b/3/896b3eeddab41d849e2458f73a5e08df5ac52916-screenshot20190630224213.png 640w" sizes="100vw" /></a>
+        <a href="cukeup-conference-london.html"><img alt="" src="images/8/9/6/b/3/896b3eeddab41d849e2458f73a5e08df5ac52916-screenshot20190630224213.png" srcset="https://lifeintimelapse.github.io/images/a/6/f/4/5/a6f45ef41591fe42554fa5274df21acc5a17f709-screenshot201906302242132x.png 1000w, https://lifeintimelapse.github.io/images/8/3/6/b/d/836bd33bc3b1fa45068ec8fd0729eab1f223ff1d-screenshot201906302242133x.png 1139w, https://lifeintimelapse.github.io/images/8/9/6/b/3/896b3eeddab41d849e2458f73a5e08df5ac52916-screenshot20190630224213.png 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -120,8 +120,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
