--- a/static/tag_conference.html
+++ b/static/tag_conference.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="techcrunch-disrupt-london-2017.html"><img alt="" src="images/e/5/3/d/8/e53d85eab2e00c4f6796cb470e0d182930bccf21-20170503-121124201148.jpg" srcset="http://blog.lan/images/3/e/2/4/9/3e249b8bb9e9e338f9b249d5029e1b7ee676708e-20170503-1211242011482x.jpeg 1000w, http://blog.lan/images/d/8/1/9/3/d8193e7f129a4b9b3b483eb5d9c9345548195da5-20170503-1211242011483x.jpeg 1500w, http://blog.lan/images/3/7/3/7/1/373716c0d4115694dac17e69b9038bbe95259eb7-20170503-1211242011484x.jpeg 2500w, http://blog.lan/images/1/0/9/e/6/109e61e7c6f02a43ce7fb24e969e80881f9cd7b2-20170503-1211242011485x.jpeg 3500w, http://blog.lan/images/8/9/2/7/0/892704bfb0c9fd2d8a1b4e23e00e1cdb57f48947-20170503-1211242011486x.jpeg 5312w, http://blog.lan/images/e/5/3/d/8/e53d85eab2e00c4f6796cb470e0d182930bccf21-20170503-121124201148.jpeg 640w" sizes="100vw" /></a>
+        <a href="techcrunch-disrupt-london-2017.html"><img alt="" src="images/e/5/3/d/8/e53d85eab2e00c4f6796cb470e0d182930bccf21-20170503-121124201148.jpg" srcset="https://lifeintimelapse.github.io/images/3/e/2/4/9/3e249b8bb9e9e338f9b249d5029e1b7ee676708e-20170503-1211242011482x.jpeg 1000w, https://lifeintimelapse.github.io/images/d/8/1/9/3/d8193e7f129a4b9b3b483eb5d9c9345548195da5-20170503-1211242011483x.jpeg 1500w, https://lifeintimelapse.github.io/images/3/7/3/7/1/373716c0d4115694dac17e69b9038bbe95259eb7-20170503-1211242011484x.jpeg 2500w, https://lifeintimelapse.github.io/images/1/0/9/e/6/109e61e7c6f02a43ce7fb24e969e80881f9cd7b2-20170503-1211242011485x.jpeg 3500w, https://lifeintimelapse.github.io/images/8/9/2/7/0/892704bfb0c9fd2d8a1b4e23e00e1cdb57f48947-20170503-1211242011486x.jpeg 5312w, https://lifeintimelapse.github.io/images/e/5/3/d/8/e53d85eab2e00c4f6796cb470e0d182930bccf21-20170503-121124201148.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -91,7 +91,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="techcrunch-disrupt-london.html"><img alt="" src="images/3/7/4/5/c/3745c9ea61cf59b5eee325aacc87b98cbf0a5a4a-20151207-161552001778.jpg" srcset="http://blog.lan/images/4/e/f/f/e/4effe030687dc969a66e71978201eb1908645557-20151207-1615520017782x.jpeg 1000w, http://blog.lan/images/4/4/d/1/6/44d164f4f38267ee9a1c7f1128a368574b4ded51-20151207-1615520017783x.jpeg 1500w, http://blog.lan/images/f/6/f/3/9/f6f39b143fb6384d670dc32ee0624f1a6778490e-20151207-1615520017784x.jpeg 2500w, http://blog.lan/images/3/f/1/e/c/3f1ec2de49fb23d92c8fbe164167005b3d0eb553-20151207-1615520017785x.jpeg 3500w, http://blog.lan/images/6/1/b/f/f/61bff2368e323a6b4adfe3995fbb548c0a0ef2ba-20151207-1615520017786x.jpeg 5312w, http://blog.lan/images/3/7/4/5/c/3745c9ea61cf59b5eee325aacc87b98cbf0a5a4a-20151207-161552001778.jpeg 640w" sizes="100vw" /></a>
+        <a href="techcrunch-disrupt-london.html"><img alt="" src="images/3/7/4/5/c/3745c9ea61cf59b5eee325aacc87b98cbf0a5a4a-20151207-161552001778.jpg" srcset="https://lifeintimelapse.github.io/images/4/e/f/f/e/4effe030687dc969a66e71978201eb1908645557-20151207-1615520017782x.jpeg 1000w, https://lifeintimelapse.github.io/images/4/4/d/1/6/44d164f4f38267ee9a1c7f1128a368574b4ded51-20151207-1615520017783x.jpeg 1500w, https://lifeintimelapse.github.io/images/f/6/f/3/9/f6f39b143fb6384d670dc32ee0624f1a6778490e-20151207-1615520017784x.jpeg 2500w, https://lifeintimelapse.github.io/images/3/f/1/e/c/3f1ec2de49fb23d92c8fbe164167005b3d0eb553-20151207-1615520017785x.jpeg 3500w, https://lifeintimelapse.github.io/images/6/1/b/f/f/61bff2368e323a6b4adfe3995fbb548c0a0ef2ba-20151207-1615520017786x.jpeg 5312w, https://lifeintimelapse.github.io/images/3/7/4/5/c/3745c9ea61cf59b5eee325aacc87b98cbf0a5a4a-20151207-161552001778.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -119,7 +119,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="kx-at-the-k-club.html"><img alt="" src="images/a/4/0/4/b/a404b9c386a089535732f4b3709be52848cc3a1e-20120523-185436.jpg" srcset="http://blog.lan/images/9/6/5/2/e/9652ea24d0c9de01dbc2575165851e68e70c5660-20120523-1854362x.jpeg 1000w, http://blog.lan/images/7/e/a/1/c/7ea1cc8b1dd1f8285f12c3fe3f1f0c86855e727d-20120523-1854363x.jpeg 1500w, http://blog.lan/images/5/9/f/4/5/59f457a2ebce098bd5745c59d6360ba9ca332799-20120523-1854364x.jpeg 2500w, http://blog.lan/images/f/d/f/3/b/fdf3bc9e8dee27c39628e1c7ff4ad8379e24d677-20120523-1854365x.jpeg 3264w, http://blog.lan/images/a/4/0/4/b/a404b9c386a089535732f4b3709be52848cc3a1e-20120523-185436.jpeg 640w" sizes="100vw" /></a>
+        <a href="kx-at-the-k-club.html"><img alt="" src="images/a/4/0/4/b/a404b9c386a089535732f4b3709be52848cc3a1e-20120523-185436.jpg" srcset="https://lifeintimelapse.github.io/images/9/6/5/2/e/9652ea24d0c9de01dbc2575165851e68e70c5660-20120523-1854362x.jpeg 1000w, https://lifeintimelapse.github.io/images/7/e/a/1/c/7ea1cc8b1dd1f8285f12c3fe3f1f0c86855e727d-20120523-1854363x.jpeg 1500w, https://lifeintimelapse.github.io/images/5/9/f/4/5/59f457a2ebce098bd5745c59d6360ba9ca332799-20120523-1854364x.jpeg 2500w, https://lifeintimelapse.github.io/images/f/d/f/3/b/fdf3bc9e8dee27c39628e1c7ff4ad8379e24d677-20120523-1854365x.jpeg 3264w, https://lifeintimelapse.github.io/images/a/4/0/4/b/a404b9c386a089535732f4b3709be52848cc3a1e-20120523-185436.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -177,8 +177,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
