--- a/static/tag_cycling.html
+++ b/static/tag_cycling.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="sometimes-you-just-cant-decide-whether-to-scoot-or-to-cycle.html"><img alt="" src="images/6/f/7/6/b/6f76b2d7df02cdb7bbe4a43bc8da5f2aaf167d71-20160713-190203660687.jpg" srcset="http://blog.lan/images/d/c/c/8/2/dcc8270ce5f82a5bfa14e263055479b33b630d03-20160713-1902036606872x.jpeg 1000w, http://blog.lan/images/1/3/f/d/0/13fd06bf24d1406d69175707aad12e1a94e7818d-20160713-1902036606873x.jpeg 1500w, http://blog.lan/images/9/4/4/b/5/944b56a3b53b65f61dbfeab3156283c706c64169-20160713-1902036606874x.jpeg 2500w, http://blog.lan/images/b/2/8/4/e/b284ee09ea3dabac72a3160916addad4c809be54-20160713-1902036606875x.jpeg 3500w, http://blog.lan/images/b/9/e/6/3/b9e633e8290c7f2aa686ec0713feecd618d07aea-20160713-1902036606876x.jpeg 5312w, http://blog.lan/images/6/f/7/6/b/6f76b2d7df02cdb7bbe4a43bc8da5f2aaf167d71-20160713-190203660687.jpeg 640w" sizes="100vw" /></a>
+        <a href="sometimes-you-just-cant-decide-whether-to-scoot-or-to-cycle.html"><img alt="" src="images/6/f/7/6/b/6f76b2d7df02cdb7bbe4a43bc8da5f2aaf167d71-20160713-190203660687.jpg" srcset="https://lifeintimelapse.github.io/images/d/c/c/8/2/dcc8270ce5f82a5bfa14e263055479b33b630d03-20160713-1902036606872x.jpeg 1000w, https://lifeintimelapse.github.io/images/1/3/f/d/0/13fd06bf24d1406d69175707aad12e1a94e7818d-20160713-1902036606873x.jpeg 1500w, https://lifeintimelapse.github.io/images/9/4/4/b/5/944b56a3b53b65f61dbfeab3156283c706c64169-20160713-1902036606874x.jpeg 2500w, https://lifeintimelapse.github.io/images/b/2/8/4/e/b284ee09ea3dabac72a3160916addad4c809be54-20160713-1902036606875x.jpeg 3500w, https://lifeintimelapse.github.io/images/b/9/e/6/3/b9e633e8290c7f2aa686ec0713feecd618d07aea-20160713-1902036606876x.jpeg 5312w, https://lifeintimelapse.github.io/images/6/f/7/6/b/6f76b2d7df02cdb7bbe4a43bc8da5f2aaf167d71-20160713-190203660687.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -90,7 +90,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="strida-folding-bicycle.html"><img alt="" src="images/3/d/2/6/4/3d2644051bab1995c7fcfc13a597876089eddad7-20160603-105911540319.jpg" srcset="http://blog.lan/images/7/3/4/9/e/7349eb8ea1a8ef5a030cb0da3eda6ea0a542b4b0-20160603-1059115403192x.jpeg 1000w, http://blog.lan/images/2/d/b/f/f/2dbff6a70d6a6bd9610328c9512301b435735e18-20160603-1059115403193x.jpeg 1500w, http://blog.lan/images/7/7/5/c/e/775ce073d7fc5cbf1ceb37ec4ced133ac3d112ac-20160603-1059115403194x.jpeg 2500w, http://blog.lan/images/7/4/e/0/0/74e00b0ea7627ff493eba6498f5582d3440533a4-20160603-1059115403195x.jpeg 3500w, http://blog.lan/images/f/c/5/d/5/fc5d58d01935e300cbc493086c257370265bbf09-20160603-1059115403196x.jpeg 5312w, http://blog.lan/images/3/d/2/6/4/3d2644051bab1995c7fcfc13a597876089eddad7-20160603-105911540319.jpeg 640w" sizes="100vw" /></a>
+        <a href="strida-folding-bicycle.html"><img alt="" src="images/3/d/2/6/4/3d2644051bab1995c7fcfc13a597876089eddad7-20160603-105911540319.jpg" srcset="https://lifeintimelapse.github.io/images/7/3/4/9/e/7349eb8ea1a8ef5a030cb0da3eda6ea0a542b4b0-20160603-1059115403192x.jpeg 1000w, https://lifeintimelapse.github.io/images/2/d/b/f/f/2dbff6a70d6a6bd9610328c9512301b435735e18-20160603-1059115403193x.jpeg 1500w, https://lifeintimelapse.github.io/images/7/7/5/c/e/775ce073d7fc5cbf1ceb37ec4ced133ac3d112ac-20160603-1059115403194x.jpeg 2500w, https://lifeintimelapse.github.io/images/7/4/e/0/0/74e00b0ea7627ff493eba6498f5582d3440533a4-20160603-1059115403195x.jpeg 3500w, https://lifeintimelapse.github.io/images/f/c/5/d/5/fc5d58d01935e300cbc493086c257370265bbf09-20160603-1059115403196x.jpeg 5312w, https://lifeintimelapse.github.io/images/3/d/2/6/4/3d2644051bab1995c7fcfc13a597876089eddad7-20160603-105911540319.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -117,7 +117,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="satnav-and-lights-for-the-bicycle.html"><img alt="" src="images/5/d/5/8/0/5d58055de29b8a277eea45bd816def4f1987be38-20160424-224840067030.jpg" srcset="http://blog.lan/images/9/3/6/1/8/93618c81dd56bd2c9fa743f7ea355be17b5f7b21-20160424-2248400670302x.jpeg 1000w, http://blog.lan/images/3/0/c/9/2/30c92a3699beed728b350c75ed303298105c41c6-20160424-2248400670303x.jpeg 1500w, http://blog.lan/images/e/e/e/7/a/eee7af30c8745dfe556a6edd65b4d136506380eb-20160424-2248400670304x.jpeg 2500w, http://blog.lan/images/8/6/2/3/0/86230993c1b9ef3acf6a1fad83a462e6ffca35ea-20160424-2248400670305x.jpeg 3500w, http://blog.lan/images/7/2/3/5/9/7235982c9c0ce617463ce9a7cfa29e43cce22b3d-20160424-2248400670306x.jpeg 5312w, http://blog.lan/images/5/d/5/8/0/5d58055de29b8a277eea45bd816def4f1987be38-20160424-224840067030.jpeg 640w" sizes="100vw" /></a>
+        <a href="satnav-and-lights-for-the-bicycle.html"><img alt="" src="images/5/d/5/8/0/5d58055de29b8a277eea45bd816def4f1987be38-20160424-224840067030.jpg" srcset="https://lifeintimelapse.github.io/images/9/3/6/1/8/93618c81dd56bd2c9fa743f7ea355be17b5f7b21-20160424-2248400670302x.jpeg 1000w, https://lifeintimelapse.github.io/images/3/0/c/9/2/30c92a3699beed728b350c75ed303298105c41c6-20160424-2248400670303x.jpeg 1500w, https://lifeintimelapse.github.io/images/e/e/e/7/a/eee7af30c8745dfe556a6edd65b4d136506380eb-20160424-2248400670304x.jpeg 2500w, https://lifeintimelapse.github.io/images/8/6/2/3/0/86230993c1b9ef3acf6a1fad83a462e6ffca35ea-20160424-2248400670305x.jpeg 3500w, https://lifeintimelapse.github.io/images/7/2/3/5/9/7235982c9c0ce617463ce9a7cfa29e43cce22b3d-20160424-2248400670306x.jpeg 5312w, https://lifeintimelapse.github.io/images/5/d/5/8/0/5d58055de29b8a277eea45bd816def4f1987be38-20160424-224840067030.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -144,7 +144,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="50-shades-of-chrome.html"><img alt="" src="images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpg" srcset="http://blog.lan/images/5/9/d/c/d/59dcdcfe54376a9d48921c26c0de3cd37d2ec75e-20150719-2054547043262x.jpeg 1000w, http://blog.lan/images/a/7/0/8/7/a70870d604c34b62a07d8f487de2850b4a07e1ca-20150719-2054547043263x.jpeg 1500w, http://blog.lan/images/6/0/6/2/7/60627e3259d2af591a6a7ddb2c9cd14d63735710-20150719-2054547043264x.jpeg 2500w, http://blog.lan/images/8/4/b/b/a/84bba590346a98cd266758091421300d14bad98e-20150719-2054547043265x.jpeg 3500w, http://blog.lan/images/a/f/c/a/f/afcaf22e1f6d0c8f944b277e608249bede93b73c-20150719-2054547043266x.jpeg 5312w, http://blog.lan/images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpeg 640w" sizes="100vw" /></a>
+        <a href="50-shades-of-chrome.html"><img alt="" src="images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpg" srcset="https://lifeintimelapse.github.io/images/5/9/d/c/d/59dcdcfe54376a9d48921c26c0de3cd37d2ec75e-20150719-2054547043262x.jpeg 1000w, https://lifeintimelapse.github.io/images/a/7/0/8/7/a70870d604c34b62a07d8f487de2850b4a07e1ca-20150719-2054547043263x.jpeg 1500w, https://lifeintimelapse.github.io/images/6/0/6/2/7/60627e3259d2af591a6a7ddb2c9cd14d63735710-20150719-2054547043264x.jpeg 2500w, https://lifeintimelapse.github.io/images/8/4/b/b/a/84bba590346a98cd266758091421300d14bad98e-20150719-2054547043265x.jpeg 3500w, https://lifeintimelapse.github.io/images/a/f/c/a/f/afcaf22e1f6d0c8f944b277e608249bede93b73c-20150719-2054547043266x.jpeg 5312w, https://lifeintimelapse.github.io/images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -173,7 +173,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="converting-the-mountain-bike-to-slicks.html"><img alt="" src="images/c/0/8/3/7/c083706e40208f5ced8b46ac81ea8c9f1510a0cc-screenshot20190701163600.png" srcset="http://blog.lan/images/a/6/4/d/e/a64dedd7143ee8801a7c0c71e0b456ac64d8cec3-screenshot201907011636002x.png 675w, http://blog.lan/images/c/0/8/3/7/c083706e40208f5ced8b46ac81ea8c9f1510a0cc-screenshot20190701163600.png 640w" sizes="100vw" /></a>
+        <a href="converting-the-mountain-bike-to-slicks.html"><img alt="" src="images/c/0/8/3/7/c083706e40208f5ced8b46ac81ea8c9f1510a0cc-screenshot20190701163600.png" srcset="https://lifeintimelapse.github.io/images/a/6/4/d/e/a64dedd7143ee8801a7c0c71e0b456ac64d8cec3-screenshot201907011636002x.png 675w, https://lifeintimelapse.github.io/images/c/0/8/3/7/c083706e40208f5ced8b46ac81ea8c9f1510a0cc-screenshot20190701163600.png 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -229,8 +229,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
