--- a/static/tag_kayaking.html
+++ b/static/tag_kayaking.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="new-kayak-sailing-rig.html"><img alt="" src="images/7/2/c/9/1/72c9194fabc0d956ac36fffd2f5551b3c2015093-20190718-190244.jpg" srcset="http://blog.lan/images/4/5/2/3/3/452337c789ea11d636266892896fd4570adaf498-20190718-1902442x.jpeg 1000w, http://blog.lan/images/4/6/2/f/0/462f0db9a920e174d4ae524031b51ec8726a0f83-20190718-1902443x.jpeg 1500w, http://blog.lan/images/2/c/d/7/6/2cd76039b15ec3fca4e112c76146fa1ae779d37a-20190718-1902444x.jpeg 2500w, http://blog.lan/images/0/5/1/4/0/05140b9d826359985b8153541dd47ab2e726f189-20190718-1902445x.jpeg 3500w, http://blog.lan/images/7/4/9/6/2/74962b25600e4af778e4a70d61a4cb6412639a2b-20190718-1902446x.jpeg 4896w, http://blog.lan/images/7/2/c/9/1/72c9194fabc0d956ac36fffd2f5551b3c2015093-20190718-190244.jpeg 640w" sizes="100vw" /></a>
+        <a href="new-kayak-sailing-rig.html"><img alt="" src="images/7/2/c/9/1/72c9194fabc0d956ac36fffd2f5551b3c2015093-20190718-190244.jpg" srcset="https://lifeintimelapse.github.io/images/4/5/2/3/3/452337c789ea11d636266892896fd4570adaf498-20190718-1902442x.jpeg 1000w, https://lifeintimelapse.github.io/images/4/6/2/f/0/462f0db9a920e174d4ae524031b51ec8726a0f83-20190718-1902443x.jpeg 1500w, https://lifeintimelapse.github.io/images/2/c/d/7/6/2cd76039b15ec3fca4e112c76146fa1ae779d37a-20190718-1902444x.jpeg 2500w, https://lifeintimelapse.github.io/images/0/5/1/4/0/05140b9d826359985b8153541dd47ab2e726f189-20190718-1902445x.jpeg 3500w, https://lifeintimelapse.github.io/images/7/4/9/6/2/74962b25600e4af778e4a70d61a4cb6412639a2b-20190718-1902446x.jpeg 4896w, https://lifeintimelapse.github.io/images/7/2/c/9/1/72c9194fabc0d956ac36fffd2f5551b3c2015093-20190718-190244.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -89,7 +89,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="kayak-sailing-burnham-on-crouch.html"><img alt="" src="images/0/9/9/9/1/0999151dfaafce4d2975ad3c973a26a9d272a66a-screenshot20190630234341.png" srcset="http://blog.lan/images/6/1/7/0/3/617039fbcfbb30d7d7e0a329273e2bd18fc93ed3-screenshot201906302343412x.png 1000w, http://blog.lan/images/b/9/8/f/8/b98f83bb9acd66745793008be524fce7bf3a7319-screenshot201906302343413x.png 1500w, http://blog.lan/images/5/b/0/1/1/5b0113d974929e86642fdc93c62cc76544b5a476-screenshot201906302343414x.png 1816w, http://blog.lan/images/0/9/9/9/1/0999151dfaafce4d2975ad3c973a26a9d272a66a-screenshot20190630234341.png 640w" sizes="100vw" /></a>
+        <a href="kayak-sailing-burnham-on-crouch.html"><img alt="" src="images/0/9/9/9/1/0999151dfaafce4d2975ad3c973a26a9d272a66a-screenshot20190630234341.png" srcset="https://lifeintimelapse.github.io/images/6/1/7/0/3/617039fbcfbb30d7d7e0a329273e2bd18fc93ed3-screenshot201906302343412x.png 1000w, https://lifeintimelapse.github.io/images/b/9/8/f/8/b98f83bb9acd66745793008be524fce7bf3a7319-screenshot201906302343413x.png 1500w, https://lifeintimelapse.github.io/images/5/b/0/1/1/5b0113d974929e86642fdc93c62cc76544b5a476-screenshot201906302343414x.png 1816w, https://lifeintimelapse.github.io/images/0/9/9/9/1/0999151dfaafce4d2975ad3c973a26a9d272a66a-screenshot20190630234341.png 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -117,7 +117,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="kayak-sailing-isle-of-wight.html"><img alt="" src="images/5/d/c/1/7/5dc17d987911871d121a4023a568414f3517ae4a-20180728-174734991402.jpg" srcset="http://blog.lan/images/7/1/f/6/6/71f6688f959a0cd0949ff366d8a006bbc801ff54-20180728-1747349914022x.jpeg 1000w, http://blog.lan/images/7/a/8/3/5/7a8358532b0e09fe7b075d7e5696dd009ad85bf5-20180728-1747349914023x.jpeg 1500w, http://blog.lan/images/e/6/a/2/f/e6a2f0722e099e1c280efbed13f41f7931c738c9-20180728-1747349914024x.jpeg 2500w, http://blog.lan/images/2/9/9/1/5/299158cacf1686de61ed49993e989002bb2c8637-20180728-1747349914025x.jpeg 3500w, http://blog.lan/images/a/3/3/b/c/a33bcbd7fb17eabe8de10fe1e194fc1bbe82be63-20180728-1747349914026x.jpeg 5312w, http://blog.lan/images/5/d/c/1/7/5dc17d987911871d121a4023a568414f3517ae4a-20180728-174734991402.jpeg 640w" sizes="100vw" /></a>
+        <a href="kayak-sailing-isle-of-wight.html"><img alt="" src="images/5/d/c/1/7/5dc17d987911871d121a4023a568414f3517ae4a-20180728-174734991402.jpg" srcset="https://lifeintimelapse.github.io/images/7/1/f/6/6/71f6688f959a0cd0949ff366d8a006bbc801ff54-20180728-1747349914022x.jpeg 1000w, https://lifeintimelapse.github.io/images/7/a/8/3/5/7a8358532b0e09fe7b075d7e5696dd009ad85bf5-20180728-1747349914023x.jpeg 1500w, https://lifeintimelapse.github.io/images/e/6/a/2/f/e6a2f0722e099e1c280efbed13f41f7931c738c9-20180728-1747349914024x.jpeg 2500w, https://lifeintimelapse.github.io/images/2/9/9/1/5/299158cacf1686de61ed49993e989002bb2c8637-20180728-1747349914025x.jpeg 3500w, https://lifeintimelapse.github.io/images/a/3/3/b/c/a33bcbd7fb17eabe8de10fe1e194fc1bbe82be63-20180728-1747349914026x.jpeg 5312w, https://lifeintimelapse.github.io/images/5/d/c/1/7/5dc17d987911871d121a4023a568414f3517ae4a-20180728-174734991402.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -145,7 +145,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="kayak-sailing-maldon.html"><img alt="" src="images/3/5/3/e/a/353ea93c4b10c13d197c32cfe7fd404795c81c12-20180722-204929550875.jpg" srcset="http://blog.lan/images/f/2/a/5/d/f2a5d610f51ea9adca945c094875df9fb19b49a3-20180722-2049295508752x.jpeg 1000w, http://blog.lan/images/4/0/1/d/c/401dc38cd0d8603e7ff1c019f96c5b7b60b66d40-20180722-2049295508753x.jpeg 1500w, http://blog.lan/images/4/f/3/4/a/4f34a349c6ea7ec324b6357f979e27ec2466ec45-20180722-2049295508754x.jpeg 2500w, http://blog.lan/images/8/3/9/c/6/839c64a9f8b679fab9faef30132b31ce1fab0fd2-20180722-2049295508755x.jpeg 3500w, http://blog.lan/images/c/b/a/0/f/cba0faee46fcf201219043a5901e9b60620280f8-20180722-2049295508756x.jpeg 5312w, http://blog.lan/images/3/5/3/e/a/353ea93c4b10c13d197c32cfe7fd404795c81c12-20180722-204929550875.jpeg 640w" sizes="100vw" /></a>
+        <a href="kayak-sailing-maldon.html"><img alt="" src="images/3/5/3/e/a/353ea93c4b10c13d197c32cfe7fd404795c81c12-20180722-204929550875.jpg" srcset="https://lifeintimelapse.github.io/images/f/2/a/5/d/f2a5d610f51ea9adca945c094875df9fb19b49a3-20180722-2049295508752x.jpeg 1000w, https://lifeintimelapse.github.io/images/4/0/1/d/c/401dc38cd0d8603e7ff1c019f96c5b7b60b66d40-20180722-2049295508753x.jpeg 1500w, https://lifeintimelapse.github.io/images/4/f/3/4/a/4f34a349c6ea7ec324b6357f979e27ec2466ec45-20180722-2049295508754x.jpeg 2500w, https://lifeintimelapse.github.io/images/8/3/9/c/6/839c64a9f8b679fab9faef30132b31ce1fab0fd2-20180722-2049295508755x.jpeg 3500w, https://lifeintimelapse.github.io/images/c/b/a/0/f/cba0faee46fcf201219043a5901e9b60620280f8-20180722-2049295508756x.jpeg 5312w, https://lifeintimelapse.github.io/images/3/5/3/e/a/353ea93c4b10c13d197c32cfe7fd404795c81c12-20180722-204929550875.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -173,7 +173,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="building-a-kayak-sailing-rig.html"><img alt="" src="images/c/b/1/3/5/cb135f0cf1d9a737a72491dc005357c1afe76f31-20180720-180955881583.jpg" srcset="http://blog.lan/images/d/8/b/5/6/d8b56cca78c52d4e20bfe1bec659e6660f5848ce-20180720-1809558815832x.jpeg 1000w, http://blog.lan/images/a/0/d/2/4/a0d246c5405722d25f1ea9c4bbe48ad78e776b89-20180720-1809558815833x.jpeg 1500w, http://blog.lan/images/2/0/7/1/2/20712802a2c8787bb79047e2db4ed913a7ee7415-20180720-1809558815834x.jpeg 2500w, http://blog.lan/images/1/5/9/7/6/159761b23a52691c19a7404a5823afa2ed3353ae-20180720-1809558815835x.jpeg 3500w, http://blog.lan/images/b/4/b/5/3/b4b534aab6fca214d834a8af1f7c41e9bd922329-20180720-1809558815836x.jpeg 5312w, http://blog.lan/images/c/b/1/3/5/cb135f0cf1d9a737a72491dc005357c1afe76f31-20180720-180955881583.jpeg 640w" sizes="100vw" /></a>
+        <a href="building-a-kayak-sailing-rig.html"><img alt="" src="images/c/b/1/3/5/cb135f0cf1d9a737a72491dc005357c1afe76f31-20180720-180955881583.jpg" srcset="https://lifeintimelapse.github.io/images/d/8/b/5/6/d8b56cca78c52d4e20bfe1bec659e6660f5848ce-20180720-1809558815832x.jpeg 1000w, https://lifeintimelapse.github.io/images/a/0/d/2/4/a0d246c5405722d25f1ea9c4bbe48ad78e776b89-20180720-1809558815833x.jpeg 1500w, https://lifeintimelapse.github.io/images/2/0/7/1/2/20712802a2c8787bb79047e2db4ed913a7ee7415-20180720-1809558815834x.jpeg 2500w, https://lifeintimelapse.github.io/images/1/5/9/7/6/159761b23a52691c19a7404a5823afa2ed3353ae-20180720-1809558815835x.jpeg 3500w, https://lifeintimelapse.github.io/images/b/4/b/5/3/b4b534aab6fca214d834a8af1f7c41e9bd922329-20180720-1809558815836x.jpeg 5312w, https://lifeintimelapse.github.io/images/c/b/1/3/5/cb135f0cf1d9a737a72491dc005357c1afe76f31-20180720-180955881583.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -230,8 +230,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
