--- a/static/tag_parachuting.html
+++ b/static/tag_parachuting.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="failing-to-parachute-in-a-good-way.html"><img alt="" src="images/9/8/9/6/3/98963f9c1730b4e2f15c6f8bec4fef3dc4dfdd26-20100710-194853.jpg" srcset="http://blog.lan/images/b/e/b/5/b/beb5bcadd9235ddcda00ae118a2561a5eebd393f-20100710-1948532x.jpeg 1000w, http://blog.lan/images/5/6/2/b/4/562b4677c6c20e620a282468e044fa98eac2e374-20100710-1948533x.jpeg 1500w, http://blog.lan/images/4/7/c/2/7/47c2723a9e268c8bdf0239ea41106f2d6ec4a71b-20100710-1948534x.jpeg 2500w, http://blog.lan/images/6/f/c/7/d/6fc7db75f4da0206f26c1b90707ba5deebdd4be6-20100710-1948535x.jpeg 2560w, http://blog.lan/images/9/8/9/6/3/98963f9c1730b4e2f15c6f8bec4fef3dc4dfdd26-20100710-194853.jpeg 640w" sizes="100vw" /></a>
+        <a href="failing-to-parachute-in-a-good-way.html"><img alt="" src="images/9/8/9/6/3/98963f9c1730b4e2f15c6f8bec4fef3dc4dfdd26-20100710-194853.jpg" srcset="https://lifeintimelapse.github.io/images/b/e/b/5/b/beb5bcadd9235ddcda00ae118a2561a5eebd393f-20100710-1948532x.jpeg 1000w, https://lifeintimelapse.github.io/images/5/6/2/b/4/562b4677c6c20e620a282468e044fa98eac2e374-20100710-1948533x.jpeg 1500w, https://lifeintimelapse.github.io/images/4/7/c/2/7/47c2723a9e268c8bdf0239ea41106f2d6ec4a71b-20100710-1948534x.jpeg 2500w, https://lifeintimelapse.github.io/images/6/f/c/7/d/6fc7db75f4da0206f26c1b90707ba5deebdd4be6-20100710-1948535x.jpeg 2560w, https://lifeintimelapse.github.io/images/9/8/9/6/3/98963f9c1730b4e2f15c6f8bec4fef3dc4dfdd26-20100710-194853.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -118,8 +118,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
