--- a/static/tag_scooting.html
+++ b/static/tag_scooting.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="sometimes-you-just-cant-decide-whether-to-scoot-or-to-cycle.html"><img alt="" src="images/6/f/7/6/b/6f76b2d7df02cdb7bbe4a43bc8da5f2aaf167d71-20160713-190203660687.jpg" srcset="http://blog.lan/images/d/c/c/8/2/dcc8270ce5f82a5bfa14e263055479b33b630d03-20160713-1902036606872x.jpeg 1000w, http://blog.lan/images/1/3/f/d/0/13fd06bf24d1406d69175707aad12e1a94e7818d-20160713-1902036606873x.jpeg 1500w, http://blog.lan/images/9/4/4/b/5/944b56a3b53b65f61dbfeab3156283c706c64169-20160713-1902036606874x.jpeg 2500w, http://blog.lan/images/b/2/8/4/e/b284ee09ea3dabac72a3160916addad4c809be54-20160713-1902036606875x.jpeg 3500w, http://blog.lan/images/b/9/e/6/3/b9e633e8290c7f2aa686ec0713feecd618d07aea-20160713-1902036606876x.jpeg 5312w, http://blog.lan/images/6/f/7/6/b/6f76b2d7df02cdb7bbe4a43bc8da5f2aaf167d71-20160713-190203660687.jpeg 640w" sizes="100vw" /></a>
+        <a href="sometimes-you-just-cant-decide-whether-to-scoot-or-to-cycle.html"><img alt="" src="images/6/f/7/6/b/6f76b2d7df02cdb7bbe4a43bc8da5f2aaf167d71-20160713-190203660687.jpg" srcset="https://lifeintimelapse.github.io/images/d/c/c/8/2/dcc8270ce5f82a5bfa14e263055479b33b630d03-20160713-1902036606872x.jpeg 1000w, https://lifeintimelapse.github.io/images/1/3/f/d/0/13fd06bf24d1406d69175707aad12e1a94e7818d-20160713-1902036606873x.jpeg 1500w, https://lifeintimelapse.github.io/images/9/4/4/b/5/944b56a3b53b65f61dbfeab3156283c706c64169-20160713-1902036606874x.jpeg 2500w, https://lifeintimelapse.github.io/images/b/2/8/4/e/b284ee09ea3dabac72a3160916addad4c809be54-20160713-1902036606875x.jpeg 3500w, https://lifeintimelapse.github.io/images/b/9/e/6/3/b9e633e8290c7f2aa686ec0713feecd618d07aea-20160713-1902036606876x.jpeg 5312w, https://lifeintimelapse.github.io/images/6/f/7/6/b/6f76b2d7df02cdb7bbe4a43bc8da5f2aaf167d71-20160713-190203660687.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -90,7 +90,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="50-shades-of-chrome.html"><img alt="" src="images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpg" srcset="http://blog.lan/images/5/9/d/c/d/59dcdcfe54376a9d48921c26c0de3cd37d2ec75e-20150719-2054547043262x.jpeg 1000w, http://blog.lan/images/a/7/0/8/7/a70870d604c34b62a07d8f487de2850b4a07e1ca-20150719-2054547043263x.jpeg 1500w, http://blog.lan/images/6/0/6/2/7/60627e3259d2af591a6a7ddb2c9cd14d63735710-20150719-2054547043264x.jpeg 2500w, http://blog.lan/images/8/4/b/b/a/84bba590346a98cd266758091421300d14bad98e-20150719-2054547043265x.jpeg 3500w, http://blog.lan/images/a/f/c/a/f/afcaf22e1f6d0c8f944b277e608249bede93b73c-20150719-2054547043266x.jpeg 5312w, http://blog.lan/images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpeg 640w" sizes="100vw" /></a>
+        <a href="50-shades-of-chrome.html"><img alt="" src="images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpg" srcset="https://lifeintimelapse.github.io/images/5/9/d/c/d/59dcdcfe54376a9d48921c26c0de3cd37d2ec75e-20150719-2054547043262x.jpeg 1000w, https://lifeintimelapse.github.io/images/a/7/0/8/7/a70870d604c34b62a07d8f487de2850b4a07e1ca-20150719-2054547043263x.jpeg 1500w, https://lifeintimelapse.github.io/images/6/0/6/2/7/60627e3259d2af591a6a7ddb2c9cd14d63735710-20150719-2054547043264x.jpeg 2500w, https://lifeintimelapse.github.io/images/8/4/b/b/a/84bba590346a98cd266758091421300d14bad98e-20150719-2054547043265x.jpeg 3500w, https://lifeintimelapse.github.io/images/a/f/c/a/f/afcaf22e1f6d0c8f944b277e608249bede93b73c-20150719-2054547043266x.jpeg 5312w, https://lifeintimelapse.github.io/images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -148,8 +148,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
