--- a/static/tag_skiing.html
+++ b/static/tag_skiing.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="val-disere.html"><img alt="" src="images/a/7/8/4/9/a7849d978fc5e7ea6d4f995e8836955dc35050ef-screenshot20190702223414.png" srcset="http://blog.lan/images/0/c/0/1/f/0c01fdc44d9986dc7e8df8c13cc71cfee57cd7b3-screenshot201907022234142x.png 1000w, http://blog.lan/images/b/b/c/f/b/bbcfb79147fd84a65be4b5b9bc4f4ae3eae29df4-screenshot201907022234143x.png 1500w, http://blog.lan/images/8/0/2/3/7/80237a09c72243ff080c8d9de97d9342dfc3331c-screenshot201907022234144x.png 1708w, http://blog.lan/images/a/7/8/4/9/a7849d978fc5e7ea6d4f995e8836955dc35050ef-screenshot20190702223414.png 640w" sizes="100vw" /></a>
+        <a href="val-disere.html"><img alt="" src="images/a/7/8/4/9/a7849d978fc5e7ea6d4f995e8836955dc35050ef-screenshot20190702223414.png" srcset="https://lifeintimelapse.github.io/images/0/c/0/1/f/0c01fdc44d9986dc7e8df8c13cc71cfee57cd7b3-screenshot201907022234142x.png 1000w, https://lifeintimelapse.github.io/images/b/b/c/f/b/bbcfb79147fd84a65be4b5b9bc4f4ae3eae29df4-screenshot201907022234143x.png 1500w, https://lifeintimelapse.github.io/images/8/0/2/3/7/80237a09c72243ff080c8d9de97d9342dfc3331c-screenshot201907022234144x.png 1708w, https://lifeintimelapse.github.io/images/a/7/8/4/9/a7849d978fc5e7ea6d4f995e8836955dc35050ef-screenshot20190702223414.png 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -89,7 +89,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="whistler-canada.html"><img alt="" src="images/d/2/c/6/9/d2c691cc9797cf9e2b261d5d36fb48152e451065-20180226-150545833235.jpg" srcset="http://blog.lan/images/f/9/c/5/e/f9c5e15b25fcbd94ee80117f0cf3ddd4f60f8b7c-20180226-1505458332352x.jpeg 1000w, http://blog.lan/images/e/2/e/8/9/e2e89463afbe6af49e74dfef419fd34e21fb4734-20180226-1505458332353x.jpeg 1500w, http://blog.lan/images/1/e/2/9/a/1e29a69a809432eeaa6ced000ee2722b88913ff5-20180226-1505458332354x.jpeg 2500w, http://blog.lan/images/e/d/7/9/4/ed7948d73bbbf5355a53d6ee930413f19d035bd5-20180226-1505458332355x.jpeg 3500w, http://blog.lan/images/e/0/b/7/6/e0b7630b8f7ccbf346ff2894013d05ce9f212d95-20180226-1505458332356x.jpeg 5312w, http://blog.lan/images/d/2/c/6/9/d2c691cc9797cf9e2b261d5d36fb48152e451065-20180226-150545833235.jpeg 640w" sizes="100vw" /></a>
+        <a href="whistler-canada.html"><img alt="" src="images/d/2/c/6/9/d2c691cc9797cf9e2b261d5d36fb48152e451065-20180226-150545833235.jpg" srcset="https://lifeintimelapse.github.io/images/f/9/c/5/e/f9c5e15b25fcbd94ee80117f0cf3ddd4f60f8b7c-20180226-1505458332352x.jpeg 1000w, https://lifeintimelapse.github.io/images/e/2/e/8/9/e2e89463afbe6af49e74dfef419fd34e21fb4734-20180226-1505458332353x.jpeg 1500w, https://lifeintimelapse.github.io/images/1/e/2/9/a/1e29a69a809432eeaa6ced000ee2722b88913ff5-20180226-1505458332354x.jpeg 2500w, https://lifeintimelapse.github.io/images/e/d/7/9/4/ed7948d73bbbf5355a53d6ee930413f19d035bd5-20180226-1505458332355x.jpeg 3500w, https://lifeintimelapse.github.io/images/e/0/b/7/6/e0b7630b8f7ccbf346ff2894013d05ce9f212d95-20180226-1505458332356x.jpeg 5312w, https://lifeintimelapse.github.io/images/d/2/c/6/9/d2c691cc9797cf9e2b261d5d36fb48152e451065-20180226-150545833235.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -116,7 +116,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="skiing-courchevel.html"><img alt="" src="images/0/5/7/c/0/057c0f72dc6869f921dc74f03fe74aaeddfbd223-20160314-190633261394.jpg" srcset="http://blog.lan/images/d/8/b/2/8/d8b2838027dfec61ace64536e7e8a5ee22349746-20160314-1906332613942x.jpeg 1000w, http://blog.lan/images/2/d/0/a/c/2d0aca43180cf71b264c885c62cff8a7dbd9f18e-20160314-1906332613943x.jpeg 1500w, http://blog.lan/images/0/d/2/f/d/0d2fde541471a526ceed50bb8cbcd0c695023042-20160314-1906332613944x.jpeg 2500w, http://blog.lan/images/f/e/7/6/e/fe76e7822852b3405226e41b68a256f3d383340b-20160314-1906332613945x.jpeg 3500w, http://blog.lan/images/f/2/4/0/3/f24034020791d5ebf0c1dfc530be804632961824-20160314-1906332613946x.jpeg 5312w, http://blog.lan/images/0/5/7/c/0/057c0f72dc6869f921dc74f03fe74aaeddfbd223-20160314-190633261394.jpeg 640w" sizes="100vw" /></a>
+        <a href="skiing-courchevel.html"><img alt="" src="images/0/5/7/c/0/057c0f72dc6869f921dc74f03fe74aaeddfbd223-20160314-190633261394.jpg" srcset="https://lifeintimelapse.github.io/images/d/8/b/2/8/d8b2838027dfec61ace64536e7e8a5ee22349746-20160314-1906332613942x.jpeg 1000w, https://lifeintimelapse.github.io/images/2/d/0/a/c/2d0aca43180cf71b264c885c62cff8a7dbd9f18e-20160314-1906332613943x.jpeg 1500w, https://lifeintimelapse.github.io/images/0/d/2/f/d/0d2fde541471a526ceed50bb8cbcd0c695023042-20160314-1906332613944x.jpeg 2500w, https://lifeintimelapse.github.io/images/f/e/7/6/e/fe76e7822852b3405226e41b68a256f3d383340b-20160314-1906332613945x.jpeg 3500w, https://lifeintimelapse.github.io/images/f/2/4/0/3/f24034020791d5ebf0c1dfc530be804632961824-20160314-1906332613946x.jpeg 5312w, https://lifeintimelapse.github.io/images/0/5/7/c/0/057c0f72dc6869f921dc74f03fe74aaeddfbd223-20160314-190633261394.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -143,7 +143,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="back-on-the-snow.html"><img alt="" src="images/c/3/e/0/6/c3e060c2455a9e8b45bc057b5d7e35170c1188dd-20160201-071309574374.jpg" srcset="http://blog.lan/images/0/4/0/a/9/040a9a6772532449903345af9a335cf0dd182998-20160201-0713095743742x.jpeg 1000w, http://blog.lan/images/e/d/8/3/e/ed83ec1753035df010e41f5ab140eace81581211-20160201-0713095743743x.jpeg 1500w, http://blog.lan/images/d/f/7/a/2/df7a2d02fe980de9934a098149cf0c045ba27ac9-20160201-0713095743744x.jpeg 2500w, http://blog.lan/images/a/e/4/6/3/ae463a24fcacf47e8f5e928bef58de37e4cbff83-20160201-0713095743745x.jpeg 3500w, http://blog.lan/images/c/8/7/5/4/c8754a048447485a121de5d0ad94c25b4262df8d-20160201-0713095743746x.jpeg 5312w, http://blog.lan/images/c/3/e/0/6/c3e060c2455a9e8b45bc057b5d7e35170c1188dd-20160201-071309574374.jpeg 640w" sizes="100vw" /></a>
+        <a href="back-on-the-snow.html"><img alt="" src="images/c/3/e/0/6/c3e060c2455a9e8b45bc057b5d7e35170c1188dd-20160201-071309574374.jpg" srcset="https://lifeintimelapse.github.io/images/0/4/0/a/9/040a9a6772532449903345af9a335cf0dd182998-20160201-0713095743742x.jpeg 1000w, https://lifeintimelapse.github.io/images/e/d/8/3/e/ed83ec1753035df010e41f5ab140eace81581211-20160201-0713095743743x.jpeg 1500w, https://lifeintimelapse.github.io/images/d/f/7/a/2/df7a2d02fe980de9934a098149cf0c045ba27ac9-20160201-0713095743744x.jpeg 2500w, https://lifeintimelapse.github.io/images/a/e/4/6/3/ae463a24fcacf47e8f5e928bef58de37e4cbff83-20160201-0713095743745x.jpeg 3500w, https://lifeintimelapse.github.io/images/c/8/7/5/4/c8754a048447485a121de5d0ad94c25b4262df8d-20160201-0713095743746x.jpeg 5312w, https://lifeintimelapse.github.io/images/c/3/e/0/6/c3e060c2455a9e8b45bc057b5d7e35170c1188dd-20160201-071309574374.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -170,7 +170,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="skiing-in-saalbach.html"><img alt="" src="images/8/7/e/1/f/87e1f99c1105b602b89489f5edf17307d00e2c65-20150308-131847.jpg" srcset="http://blog.lan/images/0/d/3/2/a/0d32aa39935477cd1e25676f994582285301959a-20150308-1318472x.jpeg 1000w, http://blog.lan/images/f/a/6/4/8/fa6481d1257842545525553df6a6ec783d5ab7dc-20150308-1318473x.jpeg 1500w, http://blog.lan/images/1/b/0/1/4/1b0141a7a807c4eb726a87cd63cc083cd9c31ba6-20150308-1318474x.jpeg 2500w, http://blog.lan/images/b/c/0/0/2/bc00216b9a61abbd2c5834665d39e9934587d43d-20150308-1318475x.jpeg 3500w, http://blog.lan/images/7/8/b/2/7/78b2716c9caecd9616bfc9fb6624be04a0df7c6b-20150308-1318476x.jpeg 4688w, http://blog.lan/images/8/7/e/1/f/87e1f99c1105b602b89489f5edf17307d00e2c65-20150308-131847.jpeg 640w" sizes="100vw" /></a>
+        <a href="skiing-in-saalbach.html"><img alt="" src="images/8/7/e/1/f/87e1f99c1105b602b89489f5edf17307d00e2c65-20150308-131847.jpg" srcset="https://lifeintimelapse.github.io/images/0/d/3/2/a/0d32aa39935477cd1e25676f994582285301959a-20150308-1318472x.jpeg 1000w, https://lifeintimelapse.github.io/images/f/a/6/4/8/fa6481d1257842545525553df6a6ec783d5ab7dc-20150308-1318473x.jpeg 1500w, https://lifeintimelapse.github.io/images/1/b/0/1/4/1b0141a7a807c4eb726a87cd63cc083cd9c31ba6-20150308-1318474x.jpeg 2500w, https://lifeintimelapse.github.io/images/b/c/0/0/2/bc00216b9a61abbd2c5834665d39e9934587d43d-20150308-1318475x.jpeg 3500w, https://lifeintimelapse.github.io/images/7/8/b/2/7/78b2716c9caecd9616bfc9fb6624be04a0df7c6b-20150308-1318476x.jpeg 4688w, https://lifeintimelapse.github.io/images/8/7/e/1/f/87e1f99c1105b602b89489f5edf17307d00e2c65-20150308-131847.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -197,7 +197,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="che-bella-dolomiti.html"><img alt="" src="images/1/6/7/1/1/167112a009895ad6a476c9bddbb034aefe9ef7fb-20140220-171054.jpg" srcset="http://blog.lan/images/4/5/7/b/e/457be795015f69bf27318522f0417712cd6b4cb4-20140220-1710542x.jpeg 1000w, http://blog.lan/images/9/e/1/a/d/9e1ada5438420c90f0f4decfc90d86846bdd1cd8-20140220-1710543x.jpeg 1500w, http://blog.lan/images/0/9/5/3/d/0953d5eb3c0a867e6bca04d0c765ca9c6a9383fa-20140220-1710544x.jpeg 2500w, http://blog.lan/images/c/8/e/6/b/c8e6bf7a4d86a8aac7e1800943299db437cb68f3-20140220-1710545x.jpeg 3264w, http://blog.lan/images/1/6/7/1/1/167112a009895ad6a476c9bddbb034aefe9ef7fb-20140220-171054.jpeg 640w" sizes="100vw" /></a>
+        <a href="che-bella-dolomiti.html"><img alt="" src="images/1/6/7/1/1/167112a009895ad6a476c9bddbb034aefe9ef7fb-20140220-171054.jpg" srcset="https://lifeintimelapse.github.io/images/4/5/7/b/e/457be795015f69bf27318522f0417712cd6b4cb4-20140220-1710542x.jpeg 1000w, https://lifeintimelapse.github.io/images/9/e/1/a/d/9e1ada5438420c90f0f4decfc90d86846bdd1cd8-20140220-1710543x.jpeg 1500w, https://lifeintimelapse.github.io/images/0/9/5/3/d/0953d5eb3c0a867e6bca04d0c765ca9c6a9383fa-20140220-1710544x.jpeg 2500w, https://lifeintimelapse.github.io/images/c/8/e/6/b/c8e6bf7a4d86a8aac7e1800943299db437cb68f3-20140220-1710545x.jpeg 3264w, https://lifeintimelapse.github.io/images/1/6/7/1/1/167112a009895ad6a476c9bddbb034aefe9ef7fb-20140220-171054.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -224,7 +224,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="back-to-val-gardena.html"><img alt="" src="images/3/5/6/f/9/356f9783f25a6216a2afaad7dae919b0d14dcc9d-20130212-113140.jpg" srcset="http://blog.lan/images/1/a/b/e/3/1abe37ee8847624303b62b6572b90ec1151f7bcf-20130212-1131402x.jpeg 1000w, http://blog.lan/images/6/f/a/b/6/6fab6bfdeb67cd00bd2233ad2d1bab821315b904-20130212-1131403x.jpeg 1500w, http://blog.lan/images/f/7/1/1/8/f71189cbcc0d1a3a8e14a5eecf3538e7eb2d451c-20130212-1131404x.jpeg 2500w, http://blog.lan/images/b/1/0/b/c/b10bc6c1399c0a2d58c4779ac80de66a8368ef58-20130212-1131405x.jpeg 3264w, http://blog.lan/images/3/5/6/f/9/356f9783f25a6216a2afaad7dae919b0d14dcc9d-20130212-113140.jpeg 640w" sizes="100vw" /></a>
+        <a href="back-to-val-gardena.html"><img alt="" src="images/3/5/6/f/9/356f9783f25a6216a2afaad7dae919b0d14dcc9d-20130212-113140.jpg" srcset="https://lifeintimelapse.github.io/images/1/a/b/e/3/1abe37ee8847624303b62b6572b90ec1151f7bcf-20130212-1131402x.jpeg 1000w, https://lifeintimelapse.github.io/images/6/f/a/b/6/6fab6bfdeb67cd00bd2233ad2d1bab821315b904-20130212-1131403x.jpeg 1500w, https://lifeintimelapse.github.io/images/f/7/1/1/8/f71189cbcc0d1a3a8e14a5eecf3538e7eb2d451c-20130212-1131404x.jpeg 2500w, https://lifeintimelapse.github.io/images/b/1/0/b/c/b10bc6c1399c0a2d58c4779ac80de66a8368ef58-20130212-1131405x.jpeg 3264w, https://lifeintimelapse.github.io/images/3/5/6/f/9/356f9783f25a6216a2afaad7dae919b0d14dcc9d-20130212-113140.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -251,7 +251,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="skiing-in-yllas-finland.html"><img alt="" src="images/d/4/c/c/b/d4ccb34d2586fceac19e0c071bc4927e44ddcbfc-20120311-164419.jpg" srcset="http://blog.lan/images/b/b/1/a/4/bb1a480765d9ed2edc3532421d3636bd99cd5d79-20120311-1644192x.jpeg 1000w, http://blog.lan/images/2/2/b/c/2/22bc2fa48c87a67eba07841fd93387be203fc4fa-20120311-1644193x.jpeg 1500w, http://blog.lan/images/e/b/9/5/4/eb9545755e213c7cd7f729114264bdb982308e3d-20120311-1644194x.jpeg 2500w, http://blog.lan/images/a/5/8/a/4/a58a44a7088832a76c1d4166a23866b97e4d7786-20120311-1644195x.jpeg 3264w, http://blog.lan/images/d/4/c/c/b/d4ccb34d2586fceac19e0c071bc4927e44ddcbfc-20120311-164419.jpeg 640w" sizes="100vw" /></a>
+        <a href="skiing-in-yllas-finland.html"><img alt="" src="images/d/4/c/c/b/d4ccb34d2586fceac19e0c071bc4927e44ddcbfc-20120311-164419.jpg" srcset="https://lifeintimelapse.github.io/images/b/b/1/a/4/bb1a480765d9ed2edc3532421d3636bd99cd5d79-20120311-1644192x.jpeg 1000w, https://lifeintimelapse.github.io/images/2/2/b/c/2/22bc2fa48c87a67eba07841fd93387be203fc4fa-20120311-1644193x.jpeg 1500w, https://lifeintimelapse.github.io/images/e/b/9/5/4/eb9545755e213c7cd7f729114264bdb982308e3d-20120311-1644194x.jpeg 2500w, https://lifeintimelapse.github.io/images/a/5/8/a/4/a58a44a7088832a76c1d4166a23866b97e4d7786-20120311-1644195x.jpeg 3264w, https://lifeintimelapse.github.io/images/d/4/c/c/b/d4ccb34d2586fceac19e0c071bc4927e44ddcbfc-20120311-164419.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -307,8 +307,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
