--- a/static/tomato-router.html
+++ b/static/tomato-router.html
@@ -69,7 +69,7 @@
         <p>The security of ISP's standard routers has been a nagging concern of mine for some time. Security updates seem to be few and far between and there are disturbing reports of exploits in the wild. Also the functionality of these boxes is quite limited; none or limited support for local DNS, VPN and DDNS. Some third party routers add this functionality, but security is still a concern. Initially well supported, manafuacturers seem to consider a router obsolete a couple of years after launch, and the trickle of updates dwindles and dries up. </p>
 <p>I decided to put our ISPs hub in modem only mode and switch to a custom router firmware, <a href="http://freshtomato.org/">FreshTomato</a>. For this I purchased a Netgear R6250. The Tomato developers continue to support their firmware on a range of routers long after the manufacturer has lost interest. </p>
 <p>The updates keep on coming and now I'm able to use OpenVPN to connect to my home network using a DDNS address. The various web servers and docker containers on my LAN are assigned local DNS names using dnsmasq. </p>
-<p><img alt="" src="images/1/0/2/3/8/102381751e190d46fb5530887f45db1cdbb44daf-screenshot2019-07-26-tomatousb-status-overview.png" srcset="http://blog.lan/images/7/2/f/e/3/72fe3968e829f7f442dc288c6e0134980fd6aa93-screenshot2019-07-26-tomatousb-status-overview2x.png 1000w, http://blog.lan/images/c/1/2/f/7/c12f7a73e975abb8f25e09aef03a7d97087ff57c-screenshot2019-07-26-tomatousb-status-overview3x.png 1240w, http://blog.lan/images/1/0/2/3/8/102381751e190d46fb5530887f45db1cdbb44daf-screenshot2019-07-26-tomatousb-status-overview.png 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/1/0/2/3/8/102381751e190d46fb5530887f45db1cdbb44daf-screenshot2019-07-26-tomatousb-status-overview.png" srcset="https://lifeintimelapse.github.io/images/7/2/f/e/3/72fe3968e829f7f442dc288c6e0134980fd6aa93-screenshot2019-07-26-tomatousb-status-overview2x.png 1000w, https://lifeintimelapse.github.io/images/c/1/2/f/7/c12f7a73e975abb8f25e09aef03a7d97087ff57c-screenshot2019-07-26-tomatousb-status-overview3x.png 1240w, https://lifeintimelapse.github.io/images/1/0/2/3/8/102381751e190d46fb5530887f45db1cdbb44daf-screenshot2019-07-26-tomatousb-status-overview.png 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -107,8 +107,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
