--- a/static/whistler-canada.html
+++ b/static/whistler-canada.html
@@ -69,7 +69,7 @@
         <p>Back skiing on the North American continent again, for the first time since I started. It's true what they say, there's a different feel to the snow here, drier and more powdery. </p>
 
 <p>The view from the Peak to Peak gondola is really quite something.</p>
-<p><img alt="" src="images/8/e/4/4/a/8e44a8d90bfcc7eeb0965abbfc223ff0cd15692a-20180226-150545833235.jpg" srcset="http://blog.lan/images/a/3/9/1/b/a391bddd336ad323503080e239b0be6f13a4606d-20180226-1505458332352x.jpeg 1000w, http://blog.lan/images/7/a/a/a/0/7aaa0c2b9ed564e49baee7d5a4a23002e71ea726-20180226-1505458332353x.jpeg 1500w, http://blog.lan/images/9/5/9/f/a/959faf3fa36e344e98f5701286ceb62299aeaee4-20180226-1505458332354x.jpeg 2500w, http://blog.lan/images/0/4/0/a/c/040aca192fb418c72529772b9bbb68cd893cb9eb-20180226-1505458332355x.jpeg 3500w, http://blog.lan/images/a/f/2/1/0/af210a4a0712ff733b79f89d750068887014edd7-20180226-1505458332356x.jpeg 5312w, http://blog.lan/images/8/e/4/4/a/8e44a8d90bfcc7eeb0965abbfc223ff0cd15692a-20180226-150545833235.jpeg 640w" sizes="100vw" /><img alt="" src="images/1/c/e/c/3/1cec3e0869711cd654cdd7e84702cc5816d89eb9-screenshot20190702220402.png" srcset="http://blog.lan/images/9/8/e/1/0/98e102eaa1b571dd523720d11de7a01f671c584f-screenshot201907022204022x.png 1000w, http://blog.lan/images/1/9/0/3/5/190352a0945db719f05456dc3e6837d0d17f17f2-screenshot201907022204023x.png 1500w, http://blog.lan/images/e/9/6/0/a/e960a2ae6374638d2e46745cedcdb9164902870b-screenshot201907022204024x.png 2236w, http://blog.lan/images/1/c/e/c/3/1cec3e0869711cd654cdd7e84702cc5816d89eb9-screenshot20190702220402.png 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/8/e/4/4/a/8e44a8d90bfcc7eeb0965abbfc223ff0cd15692a-20180226-150545833235.jpg" srcset="https://lifeintimelapse.github.io/images/a/3/9/1/b/a391bddd336ad323503080e239b0be6f13a4606d-20180226-1505458332352x.jpeg 1000w, https://lifeintimelapse.github.io/images/7/a/a/a/0/7aaa0c2b9ed564e49baee7d5a4a23002e71ea726-20180226-1505458332353x.jpeg 1500w, https://lifeintimelapse.github.io/images/9/5/9/f/a/959faf3fa36e344e98f5701286ceb62299aeaee4-20180226-1505458332354x.jpeg 2500w, https://lifeintimelapse.github.io/images/0/4/0/a/c/040aca192fb418c72529772b9bbb68cd893cb9eb-20180226-1505458332355x.jpeg 3500w, https://lifeintimelapse.github.io/images/a/f/2/1/0/af210a4a0712ff733b79f89d750068887014edd7-20180226-1505458332356x.jpeg 5312w, https://lifeintimelapse.github.io/images/8/e/4/4/a/8e44a8d90bfcc7eeb0965abbfc223ff0cd15692a-20180226-150545833235.jpeg 640w" sizes="100vw" /><img alt="" src="images/1/c/e/c/3/1cec3e0869711cd654cdd7e84702cc5816d89eb9-screenshot20190702220402.png" srcset="https://lifeintimelapse.github.io/images/9/8/e/1/0/98e102eaa1b571dd523720d11de7a01f671c584f-screenshot201907022204022x.png 1000w, https://lifeintimelapse.github.io/images/1/9/0/3/5/190352a0945db719f05456dc3e6837d0d17f17f2-screenshot201907022204023x.png 1500w, https://lifeintimelapse.github.io/images/e/9/6/0/a/e960a2ae6374638d2e46745cedcdb9164902870b-screenshot201907022204024x.png 2236w, https://lifeintimelapse.github.io/images/1/c/e/c/3/1cec3e0869711cd654cdd7e84702cc5816d89eb9-screenshot20190702220402.png 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -107,8 +107,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
