--- a/static/improved-docker-interface.html
+++ b/static/improved-docker-interface.html
@@ -67,7 +67,7 @@
     </div>
     <div class="e-content">
         <p>I've been very pleased with the Docker support on my newest NAS, but the Synology Docker GUI is somewhat lacking. Essentially it provides start and stop buttons for the containers and that's it. I wanted something with some monitoring and a bit more control to avoid having to log into the box at the CLI every time I want to tweak a container. I could have gone with what I know from work and installed Kubernetes, but it's a bit overkill for my small home office setup. Instead I decided to try Portainer. A simple install from Docker Hub and now I have full control and oversight from the browser. </p>
-<p><img alt="" src="images/b/6/e/8/6/b6e86635047832c722c1e436a6d355e69cde5fc4-screenshot2019-07-26-portainer.png" srcset="http://blog.lan/images/1/0/9/0/c/1090c0ed7989e8fa48aaf934c39aa542bbe64a23-screenshot2019-07-26-portainer2x.png 1000w, http://blog.lan/images/e/e/4/9/4/ee494c2111a0d24477d31a35b8d1573b59adafb7-screenshot2019-07-26-portainer3x.png 1258w, http://blog.lan/images/b/6/e/8/6/b6e86635047832c722c1e436a6d355e69cde5fc4-screenshot2019-07-26-portainer.png 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/b/6/e/8/6/b6e86635047832c722c1e436a6d355e69cde5fc4-screenshot2019-07-26-portainer.png" srcset="https://lifeintimelapse.github.io/images/1/0/9/0/c/1090c0ed7989e8fa48aaf934c39aa542bbe64a23-screenshot2019-07-26-portainer2x.png 1000w, https://lifeintimelapse.github.io/images/e/e/4/9/4/ee494c2111a0d24477d31a35b8d1573b59adafb7-screenshot2019-07-26-portainer3x.png 1258w, https://lifeintimelapse.github.io/images/b/6/e/8/6/b6e86635047832c722c1e436a6d355e69cde5fc4-screenshot2019-07-26-portainer.png 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -105,8 +105,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
