--- a/static/security-on-the-road.html
+++ b/static/security-on-the-road.html
@@ -69,7 +69,7 @@
         <p>In recent years there have been many reports in the press about the dangers of using public WiFi. These hotspots offer free, convenient connectivity on the go, but are often poorly maintained and are not security audited. I attended a STAC conference recently where a security expert strongly recommended the use of a VPN. I think this is good advice, but I think he overstated the importance a bit - most websites (well, the important ones) encrypt all traffic over HTTPS these days anyway. So most of the time VPN is simply encrypting traffic that is already encrypted. Anyway, I use a OpenVPN, mainly because it's the best way of remotely accessing all of my home/office network services while exposing the minimum open ports to the internet (just one). </p>
 <p>More importantly though, I use a travel router with built in firewall. Yes, my devices themselves are all firewalled, but the router provides an additional layer of security. It reduces the attack surface of my devices by keeping them from connecting directly to the untrusted network . If any of my devices has an undisclosed vulnerability, an attacker first has to breach the router before it is exposed.</p>
 <p>It's also a great way to share a mobile connection between devices. Either connect a phone through WiFi sharing or USB or use a dedicated dongle as pictured below.</p>
-<p><img alt="" src="images/3/f/7/0/7/3f707a67ad84a721bde3bf3d6fccf5d66ad490a3-img20190727152116.jpg" srcset="http://blog.lan/images/5/9/3/e/3/593e37cdb34c7008f00c9f1183626f4656e9732d-img201907271521162x.jpeg 1000w, http://blog.lan/images/b/7/6/6/7/b7667e09892ac6454c1127cf708df07ccab58181-img201907271521163x.jpeg 1500w, http://blog.lan/images/c/8/e/2/1/c8e212d0cc040e3f4aac9eb0398db3acb4ded74a-img201907271521164x.jpeg 2500w, http://blog.lan/images/4/f/8/d/5/4f8d5d90b5900ab039f43b9d771142ea76e3ca15-img201907271521165x.jpeg 3500w, http://blog.lan/images/9/3/6/5/d/9365dca9b074ed04be26bbd64f82660e33c8acbe-img201907271521166x.jpeg 5312w, http://blog.lan/images/3/f/7/0/7/3f707a67ad84a721bde3bf3d6fccf5d66ad490a3-img20190727152116.jpeg 640w" sizes="100vw" /></p>
+<p><img alt="" src="images/3/f/7/0/7/3f707a67ad84a721bde3bf3d6fccf5d66ad490a3-img20190727152116.jpg" srcset="https://lifeintimelapse.github.io/images/5/9/3/e/3/593e37cdb34c7008f00c9f1183626f4656e9732d-img201907271521162x.jpeg 1000w, https://lifeintimelapse.github.io/images/b/7/6/6/7/b7667e09892ac6454c1127cf708df07ccab58181-img201907271521163x.jpeg 1500w, https://lifeintimelapse.github.io/images/c/8/e/2/1/c8e212d0cc040e3f4aac9eb0398db3acb4ded74a-img201907271521164x.jpeg 2500w, https://lifeintimelapse.github.io/images/4/f/8/d/5/4f8d5d90b5900ab039f43b9d771142ea76e3ca15-img201907271521165x.jpeg 3500w, https://lifeintimelapse.github.io/images/9/3/6/5/d/9365dca9b074ed04be26bbd64f82660e33c8acbe-img201907271521166x.jpeg 5312w, https://lifeintimelapse.github.io/images/3/f/7/0/7/3f707a67ad84a721bde3bf3d6fccf5d66ad490a3-img20190727152116.jpeg 640w" sizes="100vw" /></p>
     </div>
 
     </div>
@@ -107,8 +107,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
