--- a/static/tag_KDB.html
+++ b/static/tag_KDB.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="kx-at-the-k-club.html"><img alt="" src="images/a/4/0/4/b/a404b9c386a089535732f4b3709be52848cc3a1e-20120523-185436.jpg" srcset="http://blog.lan/images/9/6/5/2/e/9652ea24d0c9de01dbc2575165851e68e70c5660-20120523-1854362x.jpeg 1000w, http://blog.lan/images/7/e/a/1/c/7ea1cc8b1dd1f8285f12c3fe3f1f0c86855e727d-20120523-1854363x.jpeg 1500w, http://blog.lan/images/5/9/f/4/5/59f457a2ebce098bd5745c59d6360ba9ca332799-20120523-1854364x.jpeg 2500w, http://blog.lan/images/f/d/f/3/b/fdf3bc9e8dee27c39628e1c7ff4ad8379e24d677-20120523-1854365x.jpeg 3264w, http://blog.lan/images/a/4/0/4/b/a404b9c386a089535732f4b3709be52848cc3a1e-20120523-185436.jpeg 640w" sizes="100vw" /></a>
+        <a href="kx-at-the-k-club.html"><img alt="" src="images/a/4/0/4/b/a404b9c386a089535732f4b3709be52848cc3a1e-20120523-185436.jpg" srcset="https://lifeintimelapse.github.io/images/9/6/5/2/e/9652ea24d0c9de01dbc2575165851e68e70c5660-20120523-1854362x.jpeg 1000w, https://lifeintimelapse.github.io/images/7/e/a/1/c/7ea1cc8b1dd1f8285f12c3fe3f1f0c86855e727d-20120523-1854363x.jpeg 1500w, https://lifeintimelapse.github.io/images/5/9/f/4/5/59f457a2ebce098bd5745c59d6360ba9ca332799-20120523-1854364x.jpeg 2500w, https://lifeintimelapse.github.io/images/f/d/f/3/b/fdf3bc9e8dee27c39628e1c7ff4ad8379e24d677-20120523-1854365x.jpeg 3264w, https://lifeintimelapse.github.io/images/a/4/0/4/b/a404b9c386a089535732f4b3709be52848cc3a1e-20120523-185436.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -120,8 +120,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
