--- a/static/tag_motorcycling.html
+++ b/static/tag_motorcycling.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="solo-through-the-alps.html"><img alt="" src="images/a/f/4/0/3/af403271e172c7fef7b92af13ed70fc86b08bbe4-20170918-145208113062.jpg" srcset="http://blog.lan/images/b/0/7/b/1/b07b1c856ba909be1ab460cd9fba929c7c54325c-20170918-1452081130622x.jpeg 1000w, http://blog.lan/images/6/0/f/b/3/60fb38466c992ea9d9ecdad1f386adb4f1bb3212-20170918-1452081130623x.jpeg 1500w, http://blog.lan/images/6/f/2/2/c/6f22c8c9b727531022fe29da1b6b1370b0378eb9-20170918-1452081130624x.jpeg 2500w, http://blog.lan/images/c/0/2/2/9/c022965d7b459ec2fb0bd2cfe3a334595d712852-20170918-1452081130625x.jpeg 3500w, http://blog.lan/images/0/e/e/f/f/0eeff7d7b48b701b36468a366085205ccfe97306-20170918-1452081130626x.jpeg 5312w, http://blog.lan/images/a/f/4/0/3/af403271e172c7fef7b92af13ed70fc86b08bbe4-20170918-145208113062.jpeg 640w" sizes="100vw" /></a>
+        <a href="solo-through-the-alps.html"><img alt="" src="images/a/f/4/0/3/af403271e172c7fef7b92af13ed70fc86b08bbe4-20170918-145208113062.jpg" srcset="https://lifeintimelapse.github.io/images/b/0/7/b/1/b07b1c856ba909be1ab460cd9fba929c7c54325c-20170918-1452081130622x.jpeg 1000w, https://lifeintimelapse.github.io/images/6/0/f/b/3/60fb38466c992ea9d9ecdad1f386adb4f1bb3212-20170918-1452081130623x.jpeg 1500w, https://lifeintimelapse.github.io/images/6/f/2/2/c/6f22c8c9b727531022fe29da1b6b1370b0378eb9-20170918-1452081130624x.jpeg 2500w, https://lifeintimelapse.github.io/images/c/0/2/2/9/c022965d7b459ec2fb0bd2cfe3a334595d712852-20170918-1452081130625x.jpeg 3500w, https://lifeintimelapse.github.io/images/0/e/e/f/f/0eeff7d7b48b701b36468a366085205ccfe97306-20170918-1452081130626x.jpeg 5312w, https://lifeintimelapse.github.io/images/a/f/4/0/3/af403271e172c7fef7b92af13ed70fc86b08bbe4-20170918-145208113062.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -89,7 +89,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="into-the-arctic-circle-norway.html"><img alt="" src="images/2/e/b/e/a/2ebea0c3eb7c0fd69366ac962be0f5080f14633f-20160825-161933441991.jpg" srcset="http://blog.lan/images/b/b/a/e/4/bbae475dacc4e8045342fd4b59894fbe11917cc9-20160825-1619334419912x.jpeg 1000w, http://blog.lan/images/a/6/9/2/6/a6926683ebe3117d1968d3a461c14f62b77cbfe2-20160825-1619334419913x.jpeg 1500w, http://blog.lan/images/5/5/d/6/9/55d69ba1f8d67bffb7379d3de2b123eac7a9ff93-20160825-1619334419914x.jpeg 2500w, http://blog.lan/images/e/f/f/2/3/eff230a9929bcb50e1aae205b454156114ca0717-20160825-1619334419915x.jpeg 3500w, http://blog.lan/images/8/2/6/f/4/826f44eb886e955649b15797db1f44dc5c34b9e3-20160825-1619334419916x.jpeg 3840w, http://blog.lan/images/2/e/b/e/a/2ebea0c3eb7c0fd69366ac962be0f5080f14633f-20160825-161933441991.jpeg 640w" sizes="100vw" /></a>
+        <a href="into-the-arctic-circle-norway.html"><img alt="" src="images/2/e/b/e/a/2ebea0c3eb7c0fd69366ac962be0f5080f14633f-20160825-161933441991.jpg" srcset="https://lifeintimelapse.github.io/images/b/b/a/e/4/bbae475dacc4e8045342fd4b59894fbe11917cc9-20160825-1619334419912x.jpeg 1000w, https://lifeintimelapse.github.io/images/a/6/9/2/6/a6926683ebe3117d1968d3a461c14f62b77cbfe2-20160825-1619334419913x.jpeg 1500w, https://lifeintimelapse.github.io/images/5/5/d/6/9/55d69ba1f8d67bffb7379d3de2b123eac7a9ff93-20160825-1619334419914x.jpeg 2500w, https://lifeintimelapse.github.io/images/e/f/f/2/3/eff230a9929bcb50e1aae205b454156114ca0717-20160825-1619334419915x.jpeg 3500w, https://lifeintimelapse.github.io/images/8/2/6/f/4/826f44eb886e955649b15797db1f44dc5c34b9e3-20160825-1619334419916x.jpeg 3840w, https://lifeintimelapse.github.io/images/2/e/b/e/a/2ebea0c3eb7c0fd69366ac962be0f5080f14633f-20160825-161933441991.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -116,7 +116,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="tuscany-and-back-in-a-weekend-by-bike.html"><img alt="" src="images/0/6/d/e/9/06de9b3f8c274d85f1ffbd0e06190eca37955f67-20160716-111123226685.jpg" srcset="http://blog.lan/images/6/2/e/f/8/62ef80d7228e97ac1934da3b02172ed625e1c555-20160716-1111232266852x.jpeg 1000w, http://blog.lan/images/d/2/0/5/2/d20529c7f6e031d41bbb98806c73641d8421539d-20160716-1111232266853x.jpeg 1500w, http://blog.lan/images/9/7/7/1/f/9771fe9bfd20935f4475802018e7e2546cc06ab5-20160716-1111232266854x.jpeg 2500w, http://blog.lan/images/e/d/5/8/c/ed58c439fe0a68ef6a3cdf19cb2cae1d3cd1c2ae-20160716-1111232266855x.jpeg 3500w, http://blog.lan/images/4/e/4/3/5/4e435ad11a1423a190bd54c1b26e94b757e13b67-20160716-1111232266856x.jpeg 3840w, http://blog.lan/images/0/6/d/e/9/06de9b3f8c274d85f1ffbd0e06190eca37955f67-20160716-111123226685.jpeg 640w" sizes="100vw" /></a>
+        <a href="tuscany-and-back-in-a-weekend-by-bike.html"><img alt="" src="images/0/6/d/e/9/06de9b3f8c274d85f1ffbd0e06190eca37955f67-20160716-111123226685.jpg" srcset="https://lifeintimelapse.github.io/images/6/2/e/f/8/62ef80d7228e97ac1934da3b02172ed625e1c555-20160716-1111232266852x.jpeg 1000w, https://lifeintimelapse.github.io/images/d/2/0/5/2/d20529c7f6e031d41bbb98806c73641d8421539d-20160716-1111232266853x.jpeg 1500w, https://lifeintimelapse.github.io/images/9/7/7/1/f/9771fe9bfd20935f4475802018e7e2546cc06ab5-20160716-1111232266854x.jpeg 2500w, https://lifeintimelapse.github.io/images/e/d/5/8/c/ed58c439fe0a68ef6a3cdf19cb2cae1d3cd1c2ae-20160716-1111232266855x.jpeg 3500w, https://lifeintimelapse.github.io/images/4/e/4/3/5/4e435ad11a1423a190bd54c1b26e94b757e13b67-20160716-1111232266856x.jpeg 3840w, https://lifeintimelapse.github.io/images/0/6/d/e/9/06de9b3f8c274d85f1ffbd0e06190eca37955f67-20160716-111123226685.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -143,7 +143,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="motorcycle-tour-wales.html"><img alt="" src="images/8/6/e/d/6/86ed6bff69febef92268cc8c2c418a0e28d10b60-20150810-212243.jpg" srcset="http://blog.lan/images/8/6/1/c/4/861c474a6185ddb05649a419dbc41ca0e81d676a-20150810-2122432x.jpeg 1000w, http://blog.lan/images/9/5/f/a/b/95faba0a1b1d0542c85de4a2cbdfe643af2cfb20-20150810-2122433x.jpeg 1500w, http://blog.lan/images/3/b/7/a/c/3b7ac83c8b8ca3affff40c8ba3c43df4689ef012-20150810-2122434x.jpeg 2500w, http://blog.lan/images/5/a/b/8/f/5ab8f02bdc9a69b00c9ab12e7f29ae9578b2fdda-20150810-2122435x.jpeg 3500w, http://blog.lan/images/8/f/d/1/5/8fd15a67d0e91d148ba211ff451db409072ed423-20150810-2122436x.jpeg 3840w, http://blog.lan/images/8/6/e/d/6/86ed6bff69febef92268cc8c2c418a0e28d10b60-20150810-212243.jpeg 640w" sizes="100vw" /></a>
+        <a href="motorcycle-tour-wales.html"><img alt="" src="images/8/6/e/d/6/86ed6bff69febef92268cc8c2c418a0e28d10b60-20150810-212243.jpg" srcset="https://lifeintimelapse.github.io/images/8/6/1/c/4/861c474a6185ddb05649a419dbc41ca0e81d676a-20150810-2122432x.jpeg 1000w, https://lifeintimelapse.github.io/images/9/5/f/a/b/95faba0a1b1d0542c85de4a2cbdfe643af2cfb20-20150810-2122433x.jpeg 1500w, https://lifeintimelapse.github.io/images/3/b/7/a/c/3b7ac83c8b8ca3affff40c8ba3c43df4689ef012-20150810-2122434x.jpeg 2500w, https://lifeintimelapse.github.io/images/5/a/b/8/f/5ab8f02bdc9a69b00c9ab12e7f29ae9578b2fdda-20150810-2122435x.jpeg 3500w, https://lifeintimelapse.github.io/images/8/f/d/1/5/8fd15a67d0e91d148ba211ff451db409072ed423-20150810-2122436x.jpeg 3840w, https://lifeintimelapse.github.io/images/8/6/e/d/6/86ed6bff69febef92268cc8c2c418a0e28d10b60-20150810-212243.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -170,7 +170,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="50-shades-of-chrome.html"><img alt="" src="images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpg" srcset="http://blog.lan/images/5/9/d/c/d/59dcdcfe54376a9d48921c26c0de3cd37d2ec75e-20150719-2054547043262x.jpeg 1000w, http://blog.lan/images/a/7/0/8/7/a70870d604c34b62a07d8f487de2850b4a07e1ca-20150719-2054547043263x.jpeg 1500w, http://blog.lan/images/6/0/6/2/7/60627e3259d2af591a6a7ddb2c9cd14d63735710-20150719-2054547043264x.jpeg 2500w, http://blog.lan/images/8/4/b/b/a/84bba590346a98cd266758091421300d14bad98e-20150719-2054547043265x.jpeg 3500w, http://blog.lan/images/a/f/c/a/f/afcaf22e1f6d0c8f944b277e608249bede93b73c-20150719-2054547043266x.jpeg 5312w, http://blog.lan/images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpeg 640w" sizes="100vw" /></a>
+        <a href="50-shades-of-chrome.html"><img alt="" src="images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpg" srcset="https://lifeintimelapse.github.io/images/5/9/d/c/d/59dcdcfe54376a9d48921c26c0de3cd37d2ec75e-20150719-2054547043262x.jpeg 1000w, https://lifeintimelapse.github.io/images/a/7/0/8/7/a70870d604c34b62a07d8f487de2850b4a07e1ca-20150719-2054547043263x.jpeg 1500w, https://lifeintimelapse.github.io/images/6/0/6/2/7/60627e3259d2af591a6a7ddb2c9cd14d63735710-20150719-2054547043264x.jpeg 2500w, https://lifeintimelapse.github.io/images/8/4/b/b/a/84bba590346a98cd266758091421300d14bad98e-20150719-2054547043265x.jpeg 3500w, https://lifeintimelapse.github.io/images/a/f/c/a/f/afcaf22e1f6d0c8f944b277e608249bede93b73c-20150719-2054547043266x.jpeg 5312w, https://lifeintimelapse.github.io/images/d/6/a/3/0/d6a303a78e6ceec50ed6da6f90d95c3358e994f3-20150719-205454704326.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -199,7 +199,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="motorcycle-tour-scotland.html"><img alt="" src="images/9/0/d/8/8/90d88d6a35947d231fa52dda7f16edd82da0b4ba-20140721-124614.jpg" srcset="http://blog.lan/images/c/2/4/9/2/c2492238b619cd449654c03a0e515f7b08559248-20140721-1246142x.jpeg 1000w, http://blog.lan/images/9/b/6/d/9/9b6d9ca4418e4fd1c2b877a13cff1cfef3c8b449-20140721-1246143x.jpeg 1500w, http://blog.lan/images/9/1/a/1/7/91a17253cbfed903bf03082a831b20201f00307b-20140721-1246144x.jpeg 2500w, http://blog.lan/images/4/b/e/e/0/4bee079e3234b422db5f66f5292058193b3b2dff-20140721-1246145x.jpeg 3500w, http://blog.lan/images/9/6/e/b/9/96eb924e346d11a4dda203c188ba597815fc5408-20140721-1246146x.jpeg 4896w, http://blog.lan/images/9/0/d/8/8/90d88d6a35947d231fa52dda7f16edd82da0b4ba-20140721-124614.jpeg 640w" sizes="100vw" /></a>
+        <a href="motorcycle-tour-scotland.html"><img alt="" src="images/9/0/d/8/8/90d88d6a35947d231fa52dda7f16edd82da0b4ba-20140721-124614.jpg" srcset="https://lifeintimelapse.github.io/images/c/2/4/9/2/c2492238b619cd449654c03a0e515f7b08559248-20140721-1246142x.jpeg 1000w, https://lifeintimelapse.github.io/images/9/b/6/d/9/9b6d9ca4418e4fd1c2b877a13cff1cfef3c8b449-20140721-1246143x.jpeg 1500w, https://lifeintimelapse.github.io/images/9/1/a/1/7/91a17253cbfed903bf03082a831b20201f00307b-20140721-1246144x.jpeg 2500w, https://lifeintimelapse.github.io/images/4/b/e/e/0/4bee079e3234b422db5f66f5292058193b3b2dff-20140721-1246145x.jpeg 3500w, https://lifeintimelapse.github.io/images/9/6/e/b/9/96eb924e346d11a4dda203c188ba597815fc5408-20140721-1246146x.jpeg 4896w, https://lifeintimelapse.github.io/images/9/0/d/8/8/90d88d6a35947d231fa52dda7f16edd82da0b4ba-20140721-124614.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -226,7 +226,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="rome-by-bike.html"><img alt="" src="images/4/1/d/9/9/41d996853d5be61e462e3b2656162ad61f420f26-20130922-120025.jpg" srcset="http://blog.lan/images/b/5/5/5/f/b555ffea8222891ff890be1aae328f236f2c0641-20130922-1200252x.jpeg 1000w, http://blog.lan/images/a/6/c/8/2/a6c8291af45aab93a20e922d43e6ae5fde5ae95b-20130922-1200253x.jpeg 1500w, http://blog.lan/images/0/9/2/d/f/092df5b2ad9a51bbe60bbdbabf546a68bc1e66f4-20130922-1200254x.jpeg 2500w, http://blog.lan/images/d/d/0/f/7/dd0f7aef6fddef1a78d7ace4a41d2c23688cfbce-20130922-1200255x.jpeg 3500w, http://blog.lan/images/9/7/f/d/4/97fd41b1f475a7988d95860df14469cfa488405b-20130922-1200256x.jpeg 4128w, http://blog.lan/images/4/1/d/9/9/41d996853d5be61e462e3b2656162ad61f420f26-20130922-120025.jpeg 640w" sizes="100vw" /></a>
+        <a href="rome-by-bike.html"><img alt="" src="images/4/1/d/9/9/41d996853d5be61e462e3b2656162ad61f420f26-20130922-120025.jpg" srcset="https://lifeintimelapse.github.io/images/b/5/5/5/f/b555ffea8222891ff890be1aae328f236f2c0641-20130922-1200252x.jpeg 1000w, https://lifeintimelapse.github.io/images/a/6/c/8/2/a6c8291af45aab93a20e922d43e6ae5fde5ae95b-20130922-1200253x.jpeg 1500w, https://lifeintimelapse.github.io/images/0/9/2/d/f/092df5b2ad9a51bbe60bbdbabf546a68bc1e66f4-20130922-1200254x.jpeg 2500w, https://lifeintimelapse.github.io/images/d/d/0/f/7/dd0f7aef6fddef1a78d7ace4a41d2c23688cfbce-20130922-1200255x.jpeg 3500w, https://lifeintimelapse.github.io/images/9/7/f/d/4/97fd41b1f475a7988d95860df14469cfa488405b-20130922-1200256x.jpeg 4128w, https://lifeintimelapse.github.io/images/4/1/d/9/9/41d996853d5be61e462e3b2656162ad61f420f26-20130922-120025.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -253,7 +253,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="testing-the-triumph-sprint-gt-1050.html"><img alt="" src="images/1/3/b/f/d/13bfd5421e98161058ad04e2c8f2a5145dfe6db1-20130521-161140.jpg" srcset="http://blog.lan/images/7/0/a/d/2/70ad2caec65e36970b1ed91aa5ca2b341fba296d-20130521-1611402x.jpeg 1000w, http://blog.lan/images/7/5/a/9/8/75a98f4dbfb9d956099795f24f1d096d78fc5657-20130521-1611403x.jpeg 1500w, http://blog.lan/images/e/0/9/b/5/e09b5b6678da977382091fb562c79241fe8059f1-20130521-1611404x.jpeg 2500w, http://blog.lan/images/b/c/8/e/e/bc8eeb6493331d221f26465ab30ad7ebcf1bc7f8-20130521-1611405x.jpeg 3264w, http://blog.lan/images/1/3/b/f/d/13bfd5421e98161058ad04e2c8f2a5145dfe6db1-20130521-161140.jpeg 640w" sizes="100vw" /></a>
+        <a href="testing-the-triumph-sprint-gt-1050.html"><img alt="" src="images/1/3/b/f/d/13bfd5421e98161058ad04e2c8f2a5145dfe6db1-20130521-161140.jpg" srcset="https://lifeintimelapse.github.io/images/7/0/a/d/2/70ad2caec65e36970b1ed91aa5ca2b341fba296d-20130521-1611402x.jpeg 1000w, https://lifeintimelapse.github.io/images/7/5/a/9/8/75a98f4dbfb9d956099795f24f1d096d78fc5657-20130521-1611403x.jpeg 1500w, https://lifeintimelapse.github.io/images/e/0/9/b/5/e09b5b6678da977382091fb562c79241fe8059f1-20130521-1611404x.jpeg 2500w, https://lifeintimelapse.github.io/images/b/c/8/e/e/bc8eeb6493331d221f26465ab30ad7ebcf1bc7f8-20130521-1611405x.jpeg 3264w, https://lifeintimelapse.github.io/images/1/3/b/f/d/13bfd5421e98161058ad04e2c8f2a5145dfe6db1-20130521-161140.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -280,7 +280,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="biking-in-the-snow.html"><img alt="" src="images/8/1/9/1/1/819118a6de0b9da672d160ba17fc967aa3530c4d-screenshot20190701222358.png" srcset="http://blog.lan/images/a/e/c/f/0/aecf076a1c64955b592ddf5015aaf2d65c5676e4-screenshot201907012223582x.png 1000w, http://blog.lan/images/4/6/e/7/3/46e730faafa27fc86f9141b53b0e5edd78cff436-screenshot201907012223583x.png 1046w, http://blog.lan/images/8/1/9/1/1/819118a6de0b9da672d160ba17fc967aa3530c4d-screenshot20190701222358.png 640w" sizes="100vw" /></a>
+        <a href="biking-in-the-snow.html"><img alt="" src="images/8/1/9/1/1/819118a6de0b9da672d160ba17fc967aa3530c4d-screenshot20190701222358.png" srcset="https://lifeintimelapse.github.io/images/a/e/c/f/0/aecf076a1c64955b592ddf5015aaf2d65c5676e4-screenshot201907012223582x.png 1000w, https://lifeintimelapse.github.io/images/4/6/e/7/3/46e730faafa27fc86f9141b53b0e5edd78cff436-screenshot201907012223583x.png 1046w, https://lifeintimelapse.github.io/images/8/1/9/1/1/819118a6de0b9da672d160ba17fc967aa3530c4d-screenshot20190701222358.png 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -307,7 +307,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="bye-bye-cbr-hello-848.html"><img alt="" src="images/9/a/6/9/b/9a69ba1b2097b9f1763c9c0797d03b64a1aced29-20100417-194237.jpg" srcset="http://blog.lan/images/c/4/7/4/e/c474e9b9d809e361812edec3d9aa9286bc917480-20100417-1942372x.jpeg 1000w, http://blog.lan/images/6/1/5/a/3/615a3ce3fe280d14918f401173cdab398f8064cc-20100417-1942373x.jpeg 1500w, http://blog.lan/images/d/c/1/8/9/dc1897cc070a03ac95b1c46349503ca06f81fd84-20100417-1942374x.jpeg 2500w, http://blog.lan/images/2/3/e/3/4/23e34dfb7d85e820dbda9611099d4951f08d0ea5-20100417-1942375x.jpeg 2576w, http://blog.lan/images/9/a/6/9/b/9a69ba1b2097b9f1763c9c0797d03b64a1aced29-20100417-194237.jpeg 640w" sizes="100vw" /></a>
+        <a href="bye-bye-cbr-hello-848.html"><img alt="" src="images/9/a/6/9/b/9a69ba1b2097b9f1763c9c0797d03b64a1aced29-20100417-194237.jpg" srcset="https://lifeintimelapse.github.io/images/c/4/7/4/e/c474e9b9d809e361812edec3d9aa9286bc917480-20100417-1942372x.jpeg 1000w, https://lifeintimelapse.github.io/images/6/1/5/a/3/615a3ce3fe280d14918f401173cdab398f8064cc-20100417-1942373x.jpeg 1500w, https://lifeintimelapse.github.io/images/d/c/1/8/9/dc1897cc070a03ac95b1c46349503ca06f81fd84-20100417-1942374x.jpeg 2500w, https://lifeintimelapse.github.io/images/2/3/e/3/4/23e34dfb7d85e820dbda9611099d4951f08d0ea5-20100417-1942375x.jpeg 2576w, https://lifeintimelapse.github.io/images/9/a/6/9/b/9a69ba1b2097b9f1763c9c0797d03b64a1aced29-20100417-194237.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -363,8 +363,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
