--- a/static/tag_photography.html
+++ b/static/tag_photography.html
@@ -62,7 +62,7 @@
                 <div class="bricklayer">
                                     <div class="card">
             <div class="card-image">
-        <a href="3d-printed-camera-mount.html"><img alt="" src="images/8/1/5/7/6/81576516c492bcd1e88bcd2f3e2a4908966fda62-20140627-125516.jpg" srcset="http://blog.lan/images/3/5/b/1/2/35b12b24a1ef144b2c663f613db2d7518be1ad58-20140627-1255162x.jpeg 1000w, http://blog.lan/images/4/0/7/f/2/407f2fd0aa6bdcef189ac0b04010724b29f7cff8-20140627-1255163x.jpeg 1500w, http://blog.lan/images/0/6/1/b/0/061b06819ee500608ee2030699434c44d425e8f7-20140627-1255164x.jpeg 2500w, http://blog.lan/images/9/6/8/7/a/9687a40575ad25ef468292aa99e64c228b975999-20140627-1255165x.jpeg 3500w, http://blog.lan/images/7/1/3/1/c/7131c5ad5d25b6828d94c9eb3ab30951e8eee930-20140627-1255166x.jpeg 4128w, http://blog.lan/images/8/1/5/7/6/81576516c492bcd1e88bcd2f3e2a4908966fda62-20140627-125516.jpeg 640w" sizes="100vw" /></a>
+        <a href="3d-printed-camera-mount.html"><img alt="" src="images/8/1/5/7/6/81576516c492bcd1e88bcd2f3e2a4908966fda62-20140627-125516.jpg" srcset="https://lifeintimelapse.github.io/images/3/5/b/1/2/35b12b24a1ef144b2c663f613db2d7518be1ad58-20140627-1255162x.jpeg 1000w, https://lifeintimelapse.github.io/images/4/0/7/f/2/407f2fd0aa6bdcef189ac0b04010724b29f7cff8-20140627-1255163x.jpeg 1500w, https://lifeintimelapse.github.io/images/0/6/1/b/0/061b06819ee500608ee2030699434c44d425e8f7-20140627-1255164x.jpeg 2500w, https://lifeintimelapse.github.io/images/9/6/8/7/a/9687a40575ad25ef468292aa99e64c228b975999-20140627-1255165x.jpeg 3500w, https://lifeintimelapse.github.io/images/7/1/3/1/c/7131c5ad5d25b6828d94c9eb3ab30951e8eee930-20140627-1255166x.jpeg 4128w, https://lifeintimelapse.github.io/images/8/1/5/7/6/81576516c492bcd1e88bcd2f3e2a4908966fda62-20140627-125516.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -89,7 +89,7 @@
 
                                     <div class="card">
             <div class="card-image">
-        <a href="digiscoping.html"><img alt="" src="images/8/a/3/d/a/8a3da6616ee13800f0dbb27d632f3158e391ee80-20140513-014716.jpg" srcset="http://blog.lan/images/b/c/8/5/3/bc853a59dc13b7dde054eb77149ea3853bfb6354-20140513-0147162x.jpeg 4128w, http://blog.lan/images/8/a/3/d/a/8a3da6616ee13800f0dbb27d632f3158e391ee80-20140513-014716.jpeg 640w" sizes="100vw" /></a>
+        <a href="digiscoping.html"><img alt="" src="images/8/a/3/d/a/8a3da6616ee13800f0dbb27d632f3158e391ee80-20140513-014716.jpg" srcset="https://lifeintimelapse.github.io/images/b/c/8/5/3/bc853a59dc13b7dde054eb77149ea3853bfb6354-20140513-0147162x.jpeg 4128w, https://lifeintimelapse.github.io/images/8/a/3/d/a/8a3da6616ee13800f0dbb27d632f3158e391ee80-20140513-014716.jpeg 640w" sizes="100vw" /></a>
     </div>
         <div class="card-header">
         <div class="card-subtitle text-gray">
@@ -145,8 +145,8 @@
 </div>
 <div class="sidebar-content syndicate">
     <h4>Syndicate</h4>
-    <a class="btn" href="http://blog.lan.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="http://blog.lan.rss/"><i class="fa fa-rss-square"></i> RSS</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.atom/"><i class="fa fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="https://lifeintimelapse.github.io.rss/"><i class="fa fa-rss-square"></i> RSS</a>
     </div>
                 </div>
     </div>
